@@ -20,12 +20,15 @@
 package org.olat.commons.calendar.ui.components;
 
 import java.text.DateFormat;
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 
 import javax.servlet.http.HttpServletRequest;
 
+import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
@@ -35,7 +38,6 @@ import org.olat.core.CoreSpringFactory;
 import org.olat.core.dispatcher.mapper.Mapper;
 import org.olat.core.gui.media.JSONMediaResource;
 import org.olat.core.gui.media.MediaResource;
-import org.olat.core.logging.OLog;
 import org.olat.core.logging.Tracing;
 import org.olat.core.util.StringHelper;
 
@@ -47,8 +49,9 @@ import org.olat.core.util.StringHelper;
  */
 public class FullCalendarMapper implements Mapper {
 	
-	private static final OLog log = Tracing.createLoggerFor(FullCalendarMapper.class);
-	private static final DateFormat formatDateTime = new SimpleDateFormat("yyyy-MM-dd HH:mm");
+	private static final Logger log = Tracing.createLoggerFor(FullCalendarMapper.class);
+	private static final DateFormat formatDate = new SimpleDateFormat("yyyy-MM-dd");
+	private static final DateFormat formatDateTime = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 	
 	private final FullCalendarComponent fcC;
 	private final CalendarManager calendarManager;
@@ -85,11 +88,15 @@ public class FullCalendarMapper implements Mapper {
 			if(StringHelper.isLong(start)) {
 				long startTime = Long.parseLong(start);
 				startDate = new Date(startTime * 1000);
+			} else if(StringHelper.containsNonWhitespace(start)) {
+				startDate = parseDate(start);
 			}
 			Date endDate = null;
 			if(StringHelper.isLong(end)) {
 				long time = Long.parseLong(end);
 				endDate = new Date(time * 1000);
+			} else if(StringHelper.containsNonWhitespace(end)) {
+				endDate = parseDate(end);
 			}
 			
 			collectKalendarEvents(ja, calendarId, startDate, endDate);
@@ -141,23 +148,123 @@ public class FullCalendarMapper implements Mapper {
 		} else {
 			jsonEvent.put("title", event.getSubject());
 		}
-		jsonEvent.put("allDay", new Boolean(event.isAllDayEvent()));
-		if(StringHelper.containsNonWhitespace(cal.getCssClass())) {
-			jsonEvent.put("className", cal.getCssClass());
+		boolean allDay = event.isAllDayEvent();
+		jsonEvent.put("allDay", Boolean.valueOf(allDay));
+		
+		if(fcC.isDifferentiateManagedEvents()) {
+			applyManagedClassNames(jsonEvent, event, cal);
+		} else if(StringHelper.containsNonWhitespace(cal.getCssClass())) {
+			applyClassNames(jsonEvent, cal);
 		}
-		jsonEvent.put("editable", new Boolean(cal.getAccess() == KalendarRenderWrapper.ACCESS_READ_WRITE));
+		if(fcC.isDifferentiateLiveStreams()) {
+			applyLiveStreamClass(jsonEvent, event);
+		}
+		
+		jsonEvent.put("editable", Boolean.valueOf(cal.getAccess() == KalendarRenderWrapper.ACCESS_READ_WRITE));
+		
 		if(event.getBegin() != null) {
-			jsonEvent.put("start", formatDate(event.getBegin()));
+			if(allDay) {
+				jsonEvent.put("start", formatDate(event.getBegin()));
+			} else {
+				jsonEvent.put("start", formatDateTime(event.getBegin()));
+			}
 		}
 		if(event.getEnd() != null) {
-			jsonEvent.put("end", formatDate(event.getEnd()));
+			if(allDay) {
+				Calendar calEnd = Calendar.getInstance();
+				calEnd.setTime(event.getEnd());
+				calEnd.add(Calendar.DATE, 1);
+				jsonEvent.put("end", formatDate(calEnd.getTime()));
+			} else {
+				jsonEvent.put("end", formatDateTime(event.getEnd()));
+			}
 		}
+		if(event.getLocation() != null) {
+			jsonEvent.put("location", event.getLocation());
+		}
+		
 		return jsonEvent;
 	}
 	
-	private String formatDate(Date date) {
+	private String getColor(String cssClass) {
+		if(StringHelper.containsNonWhitespace(cssClass) && cssClass.startsWith("o_cal_")) {
+			return cssClass.substring(6, cssClass.length());
+		}
+		return null;
+	}
+	
+	private void applyClassNames(JSONObject jsonEvent, KalendarRenderWrapper cal)
+	throws JSONException {
+		jsonEvent.put("className", cal.getCssClass());
+		String color = getColor(cal.getCssClass());
+		if(StringHelper.containsNonWhitespace(color)) {
+			jsonEvent.put("color", color);
+		}
+	}
+	
+	private void applyManagedClassNames(JSONObject jsonEvent, KalendarEvent event, KalendarRenderWrapper cal)
+	throws JSONException {
+		StringBuilder classNames = new StringBuilder(32);
+		if(StringHelper.containsNonWhitespace(cal.getCssClass())) {
+			if(cal.getKalendar().hasManagedEvents()) {
+				if(!event.isManaged()) {
+					jsonEvent.put("color", "steelblue");
+				} else {
+					classNames.append(cal.getCssClass());
+					String color = getColor(cal.getCssClass());
+					if(StringHelper.containsNonWhitespace(color)) {
+						jsonEvent.put("color", color);
+					}
+				}
+			} else {
+				classNames.append(cal.getCssClass());
+				String color = getColor(cal.getCssClass());
+				if(StringHelper.containsNonWhitespace(color)) {
+					jsonEvent.put("color", color);
+				}
+			}
+		} 
+
+		if(event.isManaged()) {
+			classNames.append(" o_cal_event_managed");
+		} else {
+			classNames.append(" o_cal_event_not_managed");
+		}
+		jsonEvent.put("className", classNames.toString());
+	}
+
+	private void applyLiveStreamClass(JSONObject jsonEvent, KalendarEvent event) throws JSONException {
+		if(StringHelper.containsNonWhitespace(event.getLiveStreamUrl())) {
+			Object classNamesObj = jsonEvent.get("className");
+			if (classNamesObj instanceof String) {
+				String className = (String) classNamesObj;
+				jsonEvent.put("className", className + " o_cal_event_livestream");
+			} else {
+				jsonEvent.put("className", "o_cal_event_livestream");
+			}
+		}
+	}
+	
+	private String formatDateTime(Date date) {
 		synchronized(formatDateTime) {
 			return formatDateTime.format(date);
+		}
+	}
+	
+	private String formatDate(Date date) {
+		synchronized(formatDate) {
+			return formatDate.format(date);
+		}
+	}
+	
+	private Date parseDate(String date) {
+		try {
+			synchronized(formatDate) {
+				return formatDate.parse(date);
+			}
+		} catch (ParseException e) {
+			log.error("Cannot parse Fullcalendar date: " + date, e);
+			return null;
 		}
 	}
 }
