@@ -30,7 +30,16 @@ import java.io.OutputStream;
 import java.io.StringReader;
 import java.io.StringWriter;
 import java.io.UnsupportedEncodingException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.RejectedExecutionException;
 import java.util.zip.Adler32;
@@ -74,16 +83,17 @@ import org.olat.core.commons.services.notifications.PublisherData;
 import org.olat.core.commons.services.notifications.Subscriber;
 import org.olat.core.commons.services.notifications.SubscriptionContext;
 import org.olat.core.commons.services.taskexecutor.model.DBSecureRunnable;
+import org.olat.core.helpers.GUISettings;
 import org.olat.core.helpers.Settings;
 import org.olat.core.id.Identity;
 import org.olat.core.id.OLATResourceable;
 import org.olat.core.id.UserConstants;
-import org.olat.core.logging.OLog;
+import org.apache.logging.log4j.Logger;
 import org.olat.core.logging.Tracing;
 import org.olat.core.util.Encoder;
 import org.olat.core.util.StringHelper;
 import org.olat.core.util.WebappHelper;
-import org.olat.core.util.filter.impl.NekoHTMLFilter;
+import org.olat.core.util.filter.impl.HtmlFilter;
 import org.olat.core.util.mail.ContactList;
 import org.olat.core.util.mail.MailAttachment;
 import org.olat.core.util.mail.MailBundle;
@@ -128,7 +138,7 @@ import com.sun.mail.smtp.SMTPMessage;
 @Service("mailManager")
 public class MailManagerImpl implements MailManager, InitializingBean  {
 	
-	private static final OLog log = Tracing.createLoggerFor(MailManagerImpl.class);
+	private static final Logger log = Tracing.createLoggerFor(MailManagerImpl.class);
 
 	public static final String MAIL_TEMPLATE_FOLDER = "/customizing/mail/";
 	
@@ -141,6 +151,8 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	@Autowired
 	private NotificationsManager notificationsManager;
 	private final MailModule mailModule;
+	@Autowired
+	private GUISettings guiSettings;
 
 	private FileStorage attachmentStorage;
 	
@@ -158,16 +170,13 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		SubscriptionContext scontext = getSubscriptionContext();
 		notificationsManager.getOrCreatePublisher(scontext, pdata);
 		
-		Properties p = null;
+		Properties p = new Properties();
 		try {
 			velocityEngine = new VelocityEngine();
-			p = new Properties();
-			p.setProperty(RuntimeConstants.RUNTIME_LOG_LOGSYSTEM_CLASS, "org.apache.velocity.runtime.log.SimpleLog4JLogSystem");
 			p.setProperty(RuntimeConstants.RESOURCE_MANAGER_CACHE_CLASS, "org.olat.core.gui.render.velocity.InfinispanResourceCache");
-			p.setProperty("runtime.log.logsystem.log4j.category", "syslog");
 			velocityEngine.init(p);
 		} catch (Exception e) {
-			throw new RuntimeException("config error " + p.toString());
+			throw new RuntimeException("config error " + p);
 		}
 	}
 	
@@ -200,7 +209,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		PublisherData data = getPublisherData();
 		SubscriptionContext context = getSubscriptionContext();
 		if(context != null) {
-			notificationsManager.subscribe(identity, context, data);
+			notificationsManager.asyncSubscribe(identity, context, data);
 		}
 	}
 
@@ -438,7 +447,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 
 	private void deleteMail(DBMailLight mail, Identity identity, boolean forceRemoveRecipient) {
 		boolean delete = true;
-		List<DBMailRecipient> updates = new ArrayList<DBMailRecipient>();
+		List<DBMailRecipient> updates = new ArrayList<>();
 		if(mail.getFrom() != null && mail.getFrom().getRecipient() != null) {
 			if(identity.equalsByPersistableKey(mail.getFrom().getRecipient())) {
 				DBMailRecipient from = mail.getFrom();
@@ -468,7 +477,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		}
 		
 		if(delete) {
-			Set<String> paths = new HashSet<String>();
+			Set<String> paths = new HashSet<>();
 			
 			//all marked as deleted -> delete the mail
 			List<DBMailAttachment> attachments = getAttachments(mail);
@@ -513,8 +522,8 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			.append(" inner join fetch mail.from fromRecipient")
 			.append(" inner join fromRecipient.recipient fromRecipientIdentity")
 			.append(" inner join ").append(fetchRecipients ? "fetch" : "").append(" mail.recipients recipient")
-			.append(" inner join ").append(fetchRecipients ? "fetch" : "").append(" recipient.recipient recipientIdentity")
-			.append(" where fromRecipientIdentity.key=:fromKey and fromRecipient.deleted=false and recipientIdentity.key!=:fromKey")
+			.append(" left join ").append(fetchRecipients ? "fetch" : "").append(" recipient.recipient recipientIdentity")
+			.append(" where fromRecipientIdentity.key=:fromKey and fromRecipient.deleted=false ")
 			.append(" order by mail.creationDate desc");
 
 		TypedQuery<DBMailLight> query = dbInstance.getCurrentEntityManager()
@@ -526,8 +535,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		if(firstResult > 0) {
 			query.setFirstResult(firstResult);
 		}
-		List<DBMailLight> mails = query.getResultList();
-		return mails;
+		return query.getResultList();
 	}
 
 	@Override
@@ -586,17 +594,16 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			query.setParameter("from", from, TemporalType.TIMESTAMP);
 		}
 
-		List<DBMailLight> mails = query.getResultList();
-		return mails;
+		return query.getResultList();
 	}
 
 	@Override
 	public String getMailTemplate() {
-		File baseFolder = new File(WebappHelper.getUserDataRoot(), MAIL_TEMPLATE_FOLDER);	
+		File baseFolder = new File(WebappHelper.getUserDataRoot(), MAIL_TEMPLATE_FOLDER);
 		File template = new File(baseFolder, "mail_template.html");
 		if(template.exists()) {
 			try(InputStream in = new FileInputStream(template)) {
-				return IOUtils.toString(in);
+				return IOUtils.toString(in, "UTF-8");
 			} catch (IOException e) {
 				log.error("", e);
 			}
@@ -610,23 +617,33 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		if(!baseFolder.exists()) {
 			baseFolder.mkdirs();
 		}
-		OutputStream out = null;
-		try {
-			File templateFile = new File(baseFolder, "mail_template.html");
+		
+		File templateFile = new File(baseFolder, "mail_template.html");
+		try(OutputStream out = new FileOutputStream(templateFile);) {
 			StringReader reader = new StringReader(template);
-			out = new FileOutputStream(templateFile);
-			IOUtils.copy(reader, out);
+			IOUtils.copy(reader, out, "UTF-8");
 		} catch (IOException e) {
 			log.error("", e);
-		} finally {
-			IOUtils.closeQuietly(out);
+		}
+	}
+	
+	@Override
+	public void deleteCustomMailTemplate() {
+		File baseFolder = new File(WebappHelper.getUserDataRoot(), MAIL_TEMPLATE_FOLDER);
+		File customTemplate = new File(baseFolder, "mail_template.html");
+		if (customTemplate.exists()) {
+			try {
+				customTemplate.delete();
+			} catch (Exception e) {
+				log.error("", e);
+			}
 		}
 	}
 
 	@Override
 	public String getDefaultMailTemplate() {
 		try(InputStream in = MailModule.class.getResourceAsStream("_content/mail_template.html")) {
-			return IOUtils.toString(in);
+			return IOUtils.toString(in, "UTF-8");
 		} catch (IOException e) {
 			log.error("Cannot read the default mail template", e);
 			return null;
@@ -636,7 +653,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	@Override
 	public MailBundle[] makeMailBundles(MailContext ctxt, List<Identity> recipientsTO,
 			MailTemplate template, Identity sender, String metaId, MailerResult result) {
-		List<MailBundle> bundles = new ArrayList<MailBundle>();
+		List<MailBundle> bundles = new ArrayList<>();
 		if(recipientsTO != null) {
 			for(Identity recipient: recipientsTO) {
 				MailBundle bundle =  makeMailBundle(ctxt, recipient, template, sender, metaId, result);
@@ -650,20 +667,20 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	}
 
 	@Override
-	public MailBundle makeMailBundle(MailContext ctxt, Identity recipientTO,
+	public MailBundle makeMailBundle(MailContext ctxt, Identity recipientTo,
 			MailTemplate template, Identity sender, String metaId, MailerResult result) {	
 
 		MailBundle bundle;
-		if(MailHelper.isDisabledMailAddress(recipientTO, result)) {
+		if(recipientTo != null && MailHelper.isDisabledMailAddress(recipientTo, result)) {
 			bundle = null;//email disabled, nothing to do
 		} else {
-			MailContent msg = createContentFromTemplate(recipientTO, template, result);
+			MailContent msg = createWithContext(recipientTo, template, result);
 			if(msg != null && result.getReturnCode() == MailerResult.OK){
 				// send mail
 				bundle = new MailBundle();
 				bundle.setContext(ctxt);
 				bundle.setFromId(sender);
-				bundle.setToId(recipientTO);
+				bundle.setToId(recipientTo);
 				bundle.setMetaId(metaId);
 				bundle.setContent(msg);
 			} else {
@@ -704,11 +721,15 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		return result;
 	}
 	
-	protected MailContent decorateMail(MailBundle bundle) {
+	@Override
+	public MailContent decorateMail(MailBundle bundle) {
 		MailContent content = bundle.getContent();
 
 		String template = getMailTemplate();
 		boolean htmlTemplate = StringHelper.isHtml(template);
+		if (htmlTemplate) {
+			template = decorateStyle(template);
+		}
 		String body = content.getBody();
 		boolean htmlContent =  StringHelper.isHtml(body);
 		if(htmlTemplate && !htmlContent) {
@@ -734,7 +755,64 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		return new SimpleMailContent(content.getSubject(), decoratedBody, content.getAttachments());
 	}
 	
-	public MailContent createContentFromTemplate(Identity recipient, MailTemplate template, MailerResult result) {
+	@Override
+	public MailContent evaluateTemplate(MailTemplate template) {
+		VelocityContext context;
+		if(template.getContext() != null) {
+			context = new VelocityContext(template.getContext());
+		} else {
+			context = new VelocityContext();
+		}
+		template.putVariablesInMailContext(context, null);
+		context.put("server", Settings.getServerContextPathURI());
+
+		MailerResult result = new MailerResult();
+		StringWriter subjectWriter = new StringWriter(2000);
+		evaluate(context, template.getSubjectTemplate(), subjectWriter, result);
+		StringWriter bodyWriter = new StringWriter(2000);
+		evaluate(context, template.getBodyTemplate(), bodyWriter, result);
+		return new SimpleMailContent(subjectWriter.toString(), bodyWriter.toString(), template.getAttachments());
+	}
+
+	public String decorateMailBody(String body, Locale locale) {
+		String template = getMailTemplate();
+		boolean htmlTemplate = StringHelper.isHtml(template);
+		if (htmlTemplate) {
+			template = decorateStyle(template);
+		}
+		boolean htmlContent =  StringHelper.isHtml(body);
+		if(htmlTemplate && !htmlContent) {
+			body = body.replace("&", "&amp;");
+			body = body.replace("<", "&lt;");
+			body = body.replace("\n", "<br />");
+		}
+		VelocityContext context = new VelocityContext();
+		context.put("content", body);
+		context.put("footer", MailHelper.getMailFooter(locale));
+		context.put("server", Settings.getServerContextPathURI());
+
+		StringWriter writer = new StringWriter(2000);
+		MailerResult result = new MailerResult();
+		evaluate(context, template, writer, result);
+		
+		String decoratedBody;
+		if(result.isSuccessful()) {
+			decoratedBody = writer.toString();
+		} else {
+			decoratedBody =body;
+		}
+		return decoratedBody;
+	}
+	
+	private String decorateStyle(String template) {
+		String emailCss = guiSettings.getGuiTheme().getEmailCss();
+		return new StringBuilder()
+				.append("<head><style>").append(emailCss).append("</style></head>")
+				.append(template)
+				.toString();
+	}
+
+	protected MailContent createWithContext(Identity recipient, MailTemplate template, MailerResult result) {
 		VelocityContext context;
 		if(template != null && template.getContext() != null) {
 			context = new VelocityContext(template.getContext());
@@ -775,12 +853,17 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	 */
 	protected void evaluate(Context context, String template, StringWriter writer, MailerResult mailerResult) {
 		try {
-			boolean result = velocityEngine.evaluate(context, writer, "mailTemplate", template);
-			if (result) {
-				mailerResult.setReturnCode(MailerResult.OK);
+			if(StringHelper.containsNonWhitespace(template)) {
+				boolean result = velocityEngine.evaluate(context, writer, "mailTemplate", template);
+				if (result) {
+					mailerResult.setReturnCode(MailerResult.OK);
+				} else {
+					log.warn("can't send email from user template with no reason");
+					mailerResult.setReturnCode(MailerResult.TEMPLATE_GENERAL_ERROR);
+				}
 			} else {
-				log.warn("can't send email from user template with no reason", null);
-				mailerResult.setReturnCode(MailerResult.TEMPLATE_GENERAL_ERROR);
+				// template is empty
+				mailerResult.setReturnCode(MailerResult.OK);
 			}
 		} catch (ParseErrorException e) {
 			log.warn("can't send email from user template", e);
@@ -857,6 +940,8 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	
 	private boolean wantRealMailToo(Identity id) {
 		if(id == null) return false;
+		boolean hasNoEmail = !StringHelper.containsNonWhitespace(id.getUser().getEmail());
+		if (hasNoEmail) return false;
 		String want = id.getUser().getPreferences().getReceiveRealMail();
 		if(want != null) {
 			return "true".equals(want);
@@ -875,9 +960,9 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			
 			boolean makeRealMail = makeRealMail(toId, cc, bccLists);
 			Address fromAddress = null;
-			List<Address> toAddress = new ArrayList<Address>();
-			List<Address> ccAddress = new ArrayList<Address>();
-			List<Address> bccAddress = new ArrayList<Address>();
+			List<Address> toAddress = new ArrayList<>();
+			List<Address> ccAddress = new ArrayList<>();
+			List<Address> bccAddress = new ArrayList<>();
 			
 			if(fromId != null) {
 				DBMailRecipient fromRecipient = new DBMailRecipient();
@@ -912,13 +997,13 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			mail.setMetaId(metaId);
 			String subject = content.getSubject();
 			if(subject != null && subject.length() > 500) {
-				log.warn("Cut a too long subkect in name. Size: " + subject.length(), null);
+				log.warn("Cut a too long subkect in name. Size: " + subject.length());
 				subject = subject.substring(0, 500);
 			}
 			mail.setSubject(subject);
 			String body = content.getBody();
 			if(body != null && body.length() > 16777210) {
-				log.warn("Cut a too long body in mail. Size: " + body.length(), null);
+				log.warn("Cut a too long body in mail. Size: " + body.length());
 				body = body.substring(0, 16000000);
 			}
 			mail.setBody(body);
@@ -929,7 +1014,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				if(ores != null) {
 					String resName = ores.getResourceableTypeName();
 					if(resName != null && resName.length() > 50) {
-						log.warn("Cut a too long resourceable type name in mail context: " + resName, null);
+						log.warn("Cut a too long resourceable type name in mail context: " + resName);
 						resName = resName.substring(0, 49);
 					}
 					mail.getContext().setResName(ores.getResourceableTypeName());
@@ -938,14 +1023,14 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				
 				String resSubPath = context.getResSubPath();
 				if(resSubPath != null && resSubPath.length() > 2000) {
-					log.warn("Cut a too long resSubPath in mail context: " + resSubPath, null);
+					log.warn("Cut a too long resSubPath in mail context: " + resSubPath);
 					resSubPath = resSubPath.substring(0, 2000);
 				}
 				mail.getContext().setResSubPath(resSubPath);
 				
 				String businessPath = context.getBusinessPath();
 				if(businessPath != null && businessPath.length() > 2000) {
-					log.warn("Cut a too long resSubPath in mail context: " + businessPath, null);
+					log.warn("Cut a too long resSubPath in mail context: " + businessPath);
 					businessPath = businessPath.substring(0, 2000);
 				}
 				mail.getContext().setBusinessPath(businessPath);
@@ -1008,18 +1093,15 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			List<File> attachments = content.getAttachments();
 			if(attachments != null && !attachments.isEmpty()) {
 				for(File attachment:attachments) {
-
-					FileInputStream in = null;
-					try {
+					try(FileInputStream in = new FileInputStream(attachment)) {
 						DBMailAttachment data = new DBMailAttachment();
 						data.setSize(attachment.length());
 						data.setName(attachment.getName());
 						
 						long checksum = FileUtils.checksum(attachment, new Adler32()).getValue();
-						data.setChecksum(new Long(checksum));
+						data.setChecksum(Long.valueOf(checksum));
 						data.setMimetype(WebappHelper.getMimeType(attachment.getName()));
-						
-						in = new FileInputStream(attachment);
+	
 						String path = saveAttachmentToStorage(data.getName(), data.getMimetype(), checksum, attachment.length(), in);
 						data.setPath(path);
 						data.setMail(mail);
@@ -1029,8 +1111,6 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 						log.error("File attachment not found: " + attachment, e);
 					} catch (IOException e) {
 						log.error("Error with file attachment: " + attachment, e);
-					} finally {
-						IOUtils.closeQuietly(in);
 					}
 				}
 			}
@@ -1088,9 +1168,9 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			}
 			if(bccLists != null && bccLists.size() > 0) {
 				for(ContactList bccList:bccLists) {
-					Map<String,Identity> emailToIdentityMap = bccList.getIdentiEmails();
-					for(Map.Entry<String,Identity> entry:emailToIdentityMap.entrySet()) {
-						if(match(entry.getKey(), invalidAddresses, true)) {
+					Map<Long, Identity> emailToIdentityMap = bccList.getIdentiEmails();
+					for(Map.Entry<Long,Identity> entry:emailToIdentityMap.entrySet()) {
+						if(match(entry.getValue().getUser().getEmail(), invalidAddresses, true)) {
 							result.addFailedIdentites(entry.getValue());
 						}
 					}
@@ -1233,11 +1313,11 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				// fxdiff: change from/replyto, see FXOLAT-74 . if no from is set, use default sysadmin-address (adminemail).
 				from = createAddress(WebappHelper.getMailConfig("mailReplyTo"));
 				if(from == null) {
-					log.error("MailConfigError: mailReplyTo is not set", null);
+					log.error("MailConfigError: mailReplyTo is not set");
 				}
 			}
 
-			List<Address> toList = new ArrayList<Address>();
+			List<Address> toList = new ArrayList<>();
 			if(StringHelper.containsNonWhitespace(to)) {
 				Address[] toAddresses = InternetAddress.parse(to);
 				for(Address toAddress:toAddresses) {
@@ -1250,7 +1330,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				} 
 			}
 			
-			List<Address> ccList = new ArrayList<Address>();
+			List<Address> ccList = new ArrayList<>();
 			if(ccId != null) {
 				Address ccAddress = createAddress(ccId, result, true);
 				if(ccAddress != null) {
@@ -1292,6 +1372,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	}
 	
 	private Address createAddressWithName(String address, String name) throws UnsupportedEncodingException, AddressException {
+		if (!StringHelper.containsNonWhitespace(address)) return null;
 		InternetAddress add = new InternetAddress(address, name);
 		try {
 			add.validate();
@@ -1302,6 +1383,10 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	}
 	
 	private Address createFromAddress(String address, MailerResult result) throws AddressException {
+		if (!StringHelper.containsNonWhitespace(address)) {
+			address = WebappHelper.getMailConfig("mailFrom");
+		}
+		
 		try {
 			Address add = new InternetAddress(address);
 			return add;
@@ -1344,6 +1429,9 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				if(!StringHelper.containsNonWhitespace(emailAddress)) {
 					emailAddress = recipient.getRecipient().getUser().getProperty(UserConstants.EMAIL, null);
 				}
+				if(!StringHelper.containsNonWhitespace(emailAddress)) {
+					return true;
+				}
 				try {
 					Address address = createAddress(emailAddress);
 					if(address != null) {
@@ -1372,6 +1460,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				result.addFailedIdentites(recipient);
 			} else {
 				String emailAddress = recipient.getUser().getProperty(UserConstants.EMAIL, null);
+				if(!StringHelper.containsNonWhitespace(emailAddress)) return null;
 				Address address;
 				try {
 					address = createAddress(emailAddress);
@@ -1396,6 +1485,9 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	private Address createFromAddress(Identity recipient, MailerResult result) {
 		if(recipient != null) {
 			String emailAddress = recipient.getUser().getProperty(UserConstants.EMAIL, null);
+			if (emailAddress == null) {
+				emailAddress = WebappHelper.getMailConfig("mailFrom");
+			}
 			String name = recipient.getUser().getProperty(UserConstants.FIRSTNAME, null) + " " + recipient.getUser().getProperty(UserConstants.LASTNAME, null); 
 			Address address;
 			try {
@@ -1452,9 +1544,18 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 
 			if (attachments != null && !attachments.isEmpty()) {
 				// with attachment use multipart message
-				Multipart multipart = new MimeMultipart();
+				Multipart multipart = new MimeMultipart("mixed");
 				// 1) add body part
-				addBodyPart(body, multipart);
+				if(StringHelper.isHtml(body)) {
+					Multipart alternativePart = createMultipartAlternative(body);
+					MimeBodyPart wrap = new MimeBodyPart();
+					wrap.setContent(alternativePart);
+					multipart.addBodyPart(wrap);
+				} else {
+					BodyPart messageBodyPart = new MimeBodyPart();
+					messageBodyPart.setText(body);
+					multipart.addBodyPart(messageBodyPart);
+				}
 				// 2) add attachments
 				BodyPart messageBodyPart;
 				for (DBMailAttachment attachment : attachments) {
@@ -1462,10 +1563,10 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 					if (attachment == null || attachment.getSize()  <= 0) {
 						result.setReturnCode(MailerResult.ATTACHMENT_INVALID);
 						log.error("Tried to send mail wit attachment that does not exist::"
-								+ (attachment == null ? null : attachment.getName()), null);
+								+ (attachment == null ? null : attachment.getName()));
 						return msg;
 					}
-					messageBodyPart = new MimeBodyPart();
+					BodyPart messageBodyPart = new MimeBodyPart();
 
 					VFSLeaf data = getAttachmentDatas(attachment);
 					DataSource source = new VFSDataSource(attachment.getName(), attachment.getMimetype(), data);
@@ -1506,12 +1607,16 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	}
 
 	/**
-	 * Only legal way to create a MimeMessage!
+	 * Only legal way to create a MimeMessage!<br>
+	 * 
+	 * The specified from will be at the end the reply-to of the mime message.
+	 * The from from the mime message is the property defined with fromemail
+	 * in olat.local.properties.<br>
 	 * 
 	 * @see FXOLAT-74: send all mails as <fromemail> (in config) to have a valid reverse lookup and therefore pass spam protection.
 	 *
-	 * @param subject
-	 * @param from
+	 * @param subject The subject
+	 * @param from The from will be the reply-to
 	 * @return
 	 * @throws AddressException
 	 * @throws MessagingException
@@ -1558,7 +1663,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			p.put("mail.smtp.auth", "true");
 			mailSession = Session.getDefaultInstance(p, smtpAuth); 
 		}
-		if (log.isDebug()) {
+		if (log.isDebugEnabled()) {
 			// enable mail session debugging on console
 			mailSession.setDebug(true);
 		}
@@ -1586,10 +1691,26 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		return new InternetAddress(fromPlainAddress);
 	}
 
+	private boolean hasExternalFromAndRecipient(MimeMessage msg) throws MessagingException {
+		String fromDomain = WebappHelper.getMailConfig("mailFromDomain");
+		if (!StringHelper.containsNonWhitespace(fromDomain)) {
+			// if no mailFromDomain property is set every address is considered external
+			return true;
+		}
+		return containsExternalAddress(msg.getFrom(), fromDomain)
+				&& containsExternalAddress(msg.getAllRecipients(), fromDomain);
+	}
+
+	private boolean containsExternalAddress(Address[] addressArray, String fromDomain) {
+		return !(Arrays.stream(addressArray).map(r -> ((InternetAddress) r).getAddress())
+				.filter(x -> x.contains("@")).allMatch(x -> x.endsWith(fromDomain)));
+	}
+
 	@Override
 	public MimeMessage createMimeMessage(Address from, Address[] tos, Address[] ccs, Address[] bccs, String subject, String body,
 			List<File> attachments, MailerResult result) {
 		
+		if (from == null || ((tos == null || tos.length == 0) && ((ccs == null || ccs.length == 0)) && (bccs == null || bccs.length == 0))) return null;
 		try {
 			MimeMessage msg = createMessage(subject, from);
 			if(tos != null && tos.length > 0) {
@@ -1604,6 +1725,17 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 				msg.addRecipients(RecipientType.BCC, bccs);
 			}
 
+			String platformFrom = WebappHelper.getMailConfig("mailFrom");
+			String platformName = WebappHelper.getMailConfig("mailFromName");
+			Address viewablePlatformFrom = createAddressWithName(platformFrom, platformName);
+			// in case the sender and one of the recipients has an external mail address domain we set
+			// the from header to the admin address to prevent rejected or messages detected as spam.
+			msg.setFrom(from);
+			// from has to be set for this check to work
+			if (hasExternalFromAndRecipient(msg)) {
+				msg.setFrom(viewablePlatformFrom);
+			}
+
 			if (attachments != null && !attachments.isEmpty()) {
 				// with attachment use multipart message
 				Multipart multipart = new MimeMultipart("mixed");
@@ -1616,7 +1748,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 					if (attachmentFile == null || !attachmentFile.exists()) {
 						result.setReturnCode(MailerResult.ATTACHMENT_INVALID);
 						log.error("Tried to send mail wit attachment that does not exist::"
-								+ (attachmentFile == null ? null : attachmentFile.getAbsolutePath()), null);
+								+ (attachmentFile == null ? null : attachmentFile.getAbsolutePath()));
 						return msg;
 					}
 					BodyPart filePart = new MimeBodyPart();
@@ -1655,7 +1787,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 	
 	private Multipart createMultipartAlternative(String text)
 	throws MessagingException {
-		String pureText = new NekoHTMLFilter().filter(text, true);
+		String pureText = new HtmlFilter().filter(text, true);
 		MimeBodyPart textPart = new MimeBodyPart();
 		textPart.setText(pureText, "utf-8");
 		
@@ -1670,6 +1802,8 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 
 	@Override
 	public void sendMessage(MimeMessage msg, MailerResult result) {
+		if (msg == null) return;
+
 		String smtpFrom = WebappHelper.getMailConfig("smtpFrom");
 		if(StringHelper.containsNonWhitespace(smtpFrom)) {
 			try {
@@ -1682,9 +1816,7 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 		}
 
 		try{
-			if(Settings.isJUnitTest()) {
-				//we want not send really e-mails
-			} else if (mailModule.isMailHostEnabled() && result.getReturnCode() == MailerResult.OK) {
+			if (mailModule.isMailHostEnabled() && result.getReturnCode() == MailerResult.OK) {
 				// now send the mail
 				if(Settings.isDebuging()) {
 					logMessage(msg);
@@ -1699,9 +1831,11 @@ public class MailManagerImpl implements MailManager, InitializingBean  {
 			result.setReturnCode(MailerResult.RECIPIENT_ADDRESS_ERROR);
 			result.addInvalidAddresses(e.getInvalidAddresses());
 			result.addInvalidAddresses(e.getValidUnsentAddresses());
+			result.setErrorMessage(e.getMessage());
 			log.warn("Could not send mail", e);
 		} catch (MessagingException e) {
 			result.setReturnCode(MailerResult.SEND_GENERAL_ERROR);
+			result.setErrorMessage(e.getMessage());
 			log.warn("Could not send mail", e);
 		}
 	}
