@@ -28,11 +28,13 @@ import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import javax.annotation.PostConstruct;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 
+import org.olat.basesecurity.IdentityRef;
 import org.olat.core.commons.persistence.DB;
 import org.olat.core.gui.control.Disposable;
 import org.olat.core.gui.control.Event;
@@ -43,7 +45,7 @@ import org.olat.core.id.OLATResourceable;
 import org.olat.core.id.Roles;
 import org.olat.core.id.context.HistoryManager;
 import org.olat.core.logging.AssertException;
-import org.olat.core.logging.OLog;
+import org.apache.logging.log4j.Logger;
 import org.olat.core.logging.Tracing;
 import org.olat.core.logging.activity.CoreLoggingResourceable;
 import org.olat.core.logging.activity.OlatLoggingAction;
@@ -67,11 +69,11 @@ import org.springframework.stereotype.Service;
  * @author srosse, stephane.rosse@frentix.com, http://www.frentix.com
  *
  */
-@Service
+@Service("userSessionManager")
 public class UserSessionManager implements GenericEventListener {
 	
-	private static final OLog log = Tracing.createLoggerFor(UserSessionManager.class);
-	public static final String USERSESSIONKEY = UserSession.class.getName();
+	private static final Logger log = Tracing.createLoggerFor(UserSessionManager.class);
+	private static final String USERSESSIONKEY = UserSession.class.getName();
 	
 	public static final OLATResourceable ORES_USERSESSION = OresHelper.createOLATResourceableType(UserSession.class);
 	public static final String STORE_KEY_KILLED_EXISTING_SESSION = "killedExistingSession";
@@ -131,8 +133,7 @@ public class UserSessionManager implements GenericEventListener {
 	public UserSession getUserSession(HttpServletRequest hreq) {
 		// get existing or create new session
 		HttpSession httpSession = hreq.getSession(true);
-		UserSession usess = getUserSession(httpSession);
-		return usess;
+		return getUserSession(httpSession);
 	}
 	
 	/**
@@ -182,7 +183,7 @@ public class UserSessionManager implements GenericEventListener {
 	 * @return set of authenticated active user sessions
 	 */
 	public Set<UserSession> getAuthenticatedUserSessions() {
-		return new HashSet<UserSession>(authUserSessions);
+		return new HashSet<>(authUserSessions);
 	}
 	
 	public int getNumberOfAuthenticatedUserSessions() {
@@ -238,7 +239,7 @@ public class UserSessionManager implements GenericEventListener {
 	 * prior to calling this method, all instance vars must be set.
 	 */
 	public void signOn(UserSession usess) {
-		boolean isDebug = log.isDebug();
+		boolean isDebug = log.isDebugEnabled();
 		// Added synchronized to be symmetric with sign off and to
 		// fix a possible dead-lock see also OLAT-3390
 		synchronized(usess) {
@@ -264,12 +265,12 @@ public class UserSessionManager implements GenericEventListener {
 				// we're only adding this webdav session to the authUserSessions - not to the userNameToIdentity.
 				// userNameToIdentity is only needed for IM which can't do anything with a webdav session
 				authUserSessions.add(usess);
-				log.audit("Logged on [via webdav]: " + sessionInfo.toString());
+				log.info(Tracing.M_AUDIT, "Logged on [via webdav]: " + sessionInfo.toString());
 			} else {	
 				UserSession invalidatedSession = null;
 
 				if(isDebug) {
-					log.debug("signOn() authUsersNamesOtherNodes.contains " + identity.getName() + ": " + authUsersNamesOtherNodes.contains(identity.getKey()));
+					log.debug("signOn() authUsersNamesOtherNodes.contains " + identity.getKey() + ": " + authUsersNamesOtherNodes.contains(identity.getKey()));
 				}
 					
 			    // check if already a session exist for this user
@@ -290,7 +291,7 @@ public class UserSessionManager implements GenericEventListener {
 				// user can choose upercase letters in identity name, but this has no effect on the
 				// database queries, the login form or the IM account. IM works only with lowercase
 				// characters -> map stores values as such
-				if(isDebug) log.debug("signOn() adding to userNameToIdentity: "+identity.getName().toLowerCase());
+				if(isDebug) log.debug("signOn() adding to userNameToIdentity: " + identity.getKey());
 				userNameToIdentity.add(identity.getKey());
 				userSessionCache.put(identity.getKey(), new Integer(Settings.getNodeId()));
 			
@@ -298,7 +299,7 @@ public class UserSessionManager implements GenericEventListener {
 				//reload user prefs
 				usess.reloadPreferences();
 	
-				log.audit("Logged on: " + sessionInfo.toString());
+				log.info(Tracing.M_AUDIT, "Logged on: " + sessionInfo.toString());
 				CoordinatorManager.getInstance().getCoordinator().getEventBus().fireEventToListenersOf(new SignOnOffEvent(identity, true), ORES_USERSESSION);
 	
 				// THE FOLLOWING CHECK MUST BE PLACED HERE NOT TO PRODUCE A DEAD-LOCK WITH SIGNOFFANDCLEAR
@@ -306,7 +307,7 @@ public class UserSessionManager implements GenericEventListener {
 				if (invalidatedSession != null || authUsersNamesOtherNodes.contains(identity.getKey())) {
 					// put flag killed-existing-session into session-store to show info-message 'only one session for each user' on user-home screen
 					usess.putEntry(STORE_KEY_KILLED_EXISTING_SESSION, Boolean.TRUE);
-					if(isDebug) log.debug("signOn() removing from authUsersNamesOtherNodes: "+identity.getName());
+					if(isDebug) log.debug("signOn() removing from authUsersNamesOtherNodes: " + identity.getKey());
 					authUsersNamesOtherNodes.remove(identity.getKey());
 					//OLAT-3381 & OLAT-3382
 					if(invalidatedSession != null) {
@@ -329,6 +330,21 @@ public class UserSessionManager implements GenericEventListener {
 	}
 	
 	/**
+	 * The method will logout the specified user from all of its
+	 * session, UI, WebDAV, REST...
+	 * @param identity
+	 */
+	public void signOffAndClearAll(IdentityRef identity) {
+		List<UserSession> userSessions = authUserSessions.stream()
+				.filter(userSession -> userSession.getIdentity() != null && userSession.getIdentity().getKey().equals(identity.getKey()))
+				.collect(Collectors.toList());
+		for(UserSession userSession:userSessions) {
+			internSignOffAndClear(userSession);
+			dbInstance.commit();
+		}
+	}
+	
+	/**
 	 * called to make sure the current authenticated user (if there is one at all)
 	 * is cleared and signed off. This method is firing the SignOnOffEvent Multiuserevent.
 	 */
@@ -340,7 +356,7 @@ public class UserSessionManager implements GenericEventListener {
 	}
 	
 	private void internSignOffAndClear(UserSession usess) {
-		boolean isDebug = log.isDebug();
+		boolean isDebug = log.isDebugEnabled();
 		if(isDebug) log.debug("signOffAndClear() START");
 		
 		signOffAndClearWithout(usess);
@@ -350,7 +366,7 @@ public class UserSessionManager implements GenericEventListener {
 				SessionInfo sessionInfo = usess.getSessionInfo();
 				IdentityEnvironment identityEnvironment = usess.getIdentityEnvironment();
 				Identity identity = identityEnvironment.getIdentity();
-				log.audit("Logged off: " + sessionInfo);
+				log.info(Tracing.M_AUDIT, "Logged off: " + sessionInfo);
 				CoordinatorManager.getInstance().getCoordinator().getEventBus().fireEventToListenersOf(new SignOnOffEvent(identity, false), ORES_USERSESSION);
 				if(isDebug) log.debug("signOffAndClear() deregistering usersession from eventbus, id="+sessionInfo);
 				//fxdiff FXOLAT-231: event on GUI Preferences extern changes
@@ -375,7 +391,7 @@ public class UserSessionManager implements GenericEventListener {
 	 * without firing an event.
 	 */
 	private void signOffAndClearWithout(final UserSession usess) {
-		boolean isDebug = log.isDebug();
+		boolean isDebug = log.isDebugEnabled();
 		if(isDebug) log.debug("signOffAndClearWithout() START");
 		
 		final IdentityEnvironment identityEnvironment = usess.getIdentityEnvironment();
@@ -425,7 +441,7 @@ public class UserSessionManager implements GenericEventListener {
 
 					String objtostr = "n/a";
 					try {
-						objtostr = obj.toString();
+						objtostr = (obj == null ? "NULL" : obj.toString());
 					} catch (Exception ee) {
 						// ignore
 					}
@@ -441,7 +457,7 @@ public class UserSessionManager implements GenericEventListener {
 			//see also SIDEEFFECT!! line in signOn(..)
 			Identity previousSignedOn = identityEnvironment.getIdentity();
 			if (previousSignedOn != null && previousSignedOn.getKey() != null) {
-				if(isDebug) log.debug("signOffAndClearWithout() removing from userNameToIdentity: "+previousSignedOn.getName().toLowerCase());
+				if(isDebug) log.debug("signOffAndClearWithout() removing from userNameToIdentity: " + previousSignedOn.getKey());
 				userNameToIdentity.remove(previousSignedOn.getKey());
 				userSessionCache.remove(previousSignedOn.getKey());
 			}
@@ -479,7 +495,7 @@ public class UserSessionManager implements GenericEventListener {
 	
 	private void processSignOnOffEvent(SignOnOffEvent se) {
 		try {
-			boolean debug = log.isDebug();
+			boolean debug = log.isDebugEnabled();
 			if(debug) log.debug("event() START");
 			if(debug) log.debug("event() is SignOnOffEvent. isSignOn="+se.isSignOn());
 			if (!se.isEventOnThisNode()) {
@@ -520,12 +536,12 @@ public class UserSessionManager implements GenericEventListener {
 	public int invalidateAllSessions() {
 		log.debug("invalidateAllSessions() START");
 		int invalidateCounter = 0;
-		log.audit("All sessions were invalidated by an administrator");
+		log.info(Tracing.M_AUDIT, "All sessions were invalidated by an administrator");
 		//clusterNOK ?? invalidate only locale sessions ?
 		Set<UserSession> userSessions = getAuthenticatedUserSessions();
 		for (UserSession userSession : userSessions) {
 			Roles userRoles = userSession != null ? userSession.getRoles() : null; 
-			if (userRoles != null && !userRoles.isOLATAdmin()) {
+			if (userRoles != null && !userRoles.isAdministrator() && !userRoles.isSystemAdmin()) {
 				//do not logout administrators
 				try {
 					internSignOffAndClear(userSession);
@@ -554,19 +570,20 @@ public class UserSessionManager implements GenericEventListener {
 		Comparator<UserSession> sessionComparator = new Comparator<UserSession>() {
 			@Override
 			public int compare(UserSession o1, UserSession o2) {
-				Long long1 = new Long((o1).getSessionInfo().getLastClickTime());
-				Long long2 = new Long((o2).getSessionInfo().getLastClickTime());
+				Long long1 = Long.valueOf((o1).getSessionInfo().getLastClickTime());
+				Long long2 = Long.valueOf((o2).getSessionInfo().getLastClickTime());
 				return long1.compareTo(long2);
 			}
 		};
 		// clusterNOK ?? invalidate only locale sessions ?
-		TreeSet<UserSession> sortedSet = new TreeSet<UserSession>(sessionComparator);
+		TreeSet<UserSession> sortedSet = new TreeSet<>(sessionComparator);
 		sortedSet.addAll(authUserSessions);
 		int i = 0;	
 		for (Iterator<UserSession> iterator = sortedSet.iterator(); iterator.hasNext() && i++<nbrSessions;) {
 			try {
 				UserSession userSession = iterator.next();
-				if (!userSession.getRoles().isOLATAdmin() && !userSession.getSessionInfo().isWebDAV()) {
+				if (!userSession.getRoles().isAdministrator() && !userSession.getRoles().isSystemAdmin()
+						&& !userSession.getSessionInfo().isWebDAV()) {
 					internSignOffAndClear(userSession);
 					invalidateCounter++;
 				}
