@@ -37,6 +37,8 @@ import org.olat.course.ICourse;
 import org.olat.course.assessment.AssessmentHelper;
 import org.olat.course.assessment.AssessmentModule;
 import org.olat.course.assessment.manager.AssessmentNotificationsHandler;
+import org.olat.course.assessment.ui.tool.event.AssessmentModeStatusEvent;
+import org.olat.course.assessment.ui.tool.event.CourseNodeEvent;
 import org.olat.course.certificate.CertificatesManager;
 import org.olat.group.BusinessGroupService;
 import org.olat.group.model.SearchBusinessGroupParams;
@@ -61,9 +63,14 @@ public class AssessmentCourseOverviewController extends BasicController {
 	
 	private final VelocityContainer mainVC;
 	private final AssessmentToReviewSmallController toReviewCtrl;
+	private final AssessmentModeOverviewListController assessmentModeListCtrl;
 	private final AssessmentCourseStatisticsSmallController statisticsCtrl;
 
-	private Link assessedIdentitiesLink, assessableCoureNodesLink, assessedGroupsLink, passedLink, failedLink;
+	private Link passedLink;
+	private Link failedLink;
+	private Link assessedGroupsLink;
+	private Link assessedIdentitiesLink;
+	private Link assessableCoureNodesLink;
 	
 	private final int numOfGroups;
 
@@ -83,7 +90,7 @@ public class AssessmentCourseOverviewController extends BasicController {
 		
 		ICourse course = CourseFactory.loadCourse(courseEntry);
 		boolean hasAssessableNodes = course.hasAssessableNodes();
-		mainVC.contextPut("hasAssessableNodes", new Boolean(hasAssessableNodes));
+		mainVC.contextPut("hasAssessableNodes", Boolean.valueOf(hasAssessableNodes));
 		
 		// assessment changes subscription
 		if (hasAssessableNodes) {
@@ -156,12 +163,22 @@ public class AssessmentCourseOverviewController extends BasicController {
 			assessedGroupsLink.setCustomDisplayText(translate("assessment.tool.numOfAssessedGroups", new String[]{ Integer.toString(numOfGroups) }));
 			assessedGroupsLink.setIconLeftCSS("o_icon o_icon_group o_icon-fw");
 		}
+		
+		assessmentModeListCtrl = new AssessmentModeOverviewListController(ureq, getWindowControl(), courseEntry, assessmentCallback);
+		listenTo(assessmentModeListCtrl);
+		if(assessmentModeListCtrl.getNumOfAssessmentModes() > 0) {
+			mainVC.put("assessmentModes", assessmentModeListCtrl.getInitialComponent());
+		}
 
 		putInitialPanel(mainVC);
 	}
 	
 	public int getNumOfBusinessGroups() {
 		return numOfGroups;
+	}
+	
+	public void reloadAssessmentModes() {
+		assessmentModeListCtrl.loadModel();
 	}
 
 	@Override
@@ -173,6 +190,10 @@ public class AssessmentCourseOverviewController extends BasicController {
 	protected void event(UserRequest ureq, Controller source, Event event) {
 		if(toReviewCtrl == source) {
 			if(event instanceof UserSelectionEvent) {
+				fireEvent(ureq, event);
+			}
+		} else if(assessmentModeListCtrl == source) {
+			if(event instanceof CourseNodeEvent || event instanceof AssessmentModeStatusEvent) {
 				fireEvent(ureq, event);
 			}
 		}
