@@ -44,10 +44,10 @@ import org.olat.core.gui.components.htmlheader.jscss.CustomCSS;
 import org.olat.core.gui.components.link.Link;
 import org.olat.core.gui.components.link.LinkFactory;
 import org.olat.core.gui.components.link.LinkPopupSettings;
+import org.olat.core.gui.components.stack.BreadcrumbedStackedPanel.BreadCrumb;
 import org.olat.core.gui.components.stack.PopEvent;
 import org.olat.core.gui.components.stack.TooledStackedPanel.Align;
 import org.olat.core.gui.components.stack.VetoPopEvent;
-import org.olat.core.gui.components.stack.BreadcrumbedStackedPanel.BreadCrumb;
 import org.olat.core.gui.control.ChiefController;
 import org.olat.core.gui.control.Controller;
 import org.olat.core.gui.control.Event;
@@ -74,11 +74,9 @@ import org.olat.core.util.event.GenericEventListener;
 import org.olat.core.util.event.MultiUserEvent;
 import org.olat.core.util.mail.MailPackage;
 import org.olat.core.util.mail.MailerResult;
-import org.olat.core.util.nodes.INode;
 import org.olat.core.util.prefs.Preferences;
 import org.olat.core.util.resource.OresHelper;
 import org.olat.core.util.tree.TreeVisitor;
-import org.olat.core.util.tree.Visitor;
 import org.olat.core.util.vfs.NamedContainerImpl;
 import org.olat.core.util.vfs.VFSContainer;
 import org.olat.course.CorruptedCourseException;
@@ -91,13 +89,13 @@ import org.olat.course.area.CourseAreasController;
 import org.olat.course.assessment.AssessmentChangedEvent;
 import org.olat.course.assessment.AssessmentModule;
 import org.olat.course.assessment.ui.mode.AssessmentModeListController;
+import org.olat.course.assessment.ui.mode.AssessmentModeSecurityCallback;
+import org.olat.course.assessment.ui.mode.AssessmentModeSecurityCallbackFactory;
 import org.olat.course.assessment.ui.tool.AssessmentToolController;
 import org.olat.course.certificate.ui.CertificateAndEfficiencyStatementController;
-import org.olat.course.certificate.ui.CertificatesOptionsController;
 import org.olat.course.config.CourseConfig;
 import org.olat.course.config.CourseConfigEvent;
-import org.olat.course.config.ui.CourseOptionsController;
-import org.olat.course.config.ui.courselayout.CourseLayoutGeneratorController;
+import org.olat.course.config.ui.CourseSettingsController;
 import org.olat.course.db.CourseDBManager;
 import org.olat.course.db.CustomDBMainController;
 import org.olat.course.editor.EditorMainController;
@@ -114,21 +112,29 @@ import org.olat.course.run.userview.UserCourseEnvironment;
 import org.olat.course.run.userview.UserCourseEnvironmentImpl;
 import org.olat.course.statistic.StatisticCourseNodesController;
 import org.olat.course.statistic.StatisticMainController;
+import org.olat.course.statistic.StatisticType;
 import org.olat.course.tree.CourseInternalLinkTreeModel;
 import org.olat.group.BusinessGroup;
 import org.olat.group.BusinessGroupRef;
 import org.olat.group.BusinessGroupService;
 import org.olat.group.ui.edit.BusinessGroupModifiedEvent;
-import org.olat.ims.qti.statistics.QTIType;
 import org.olat.instantMessaging.InstantMessagingModule;
 import org.olat.instantMessaging.InstantMessagingService;
 import org.olat.instantMessaging.OpenInstantMessageEvent;
 import org.olat.modules.assessment.ui.AssessmentToolSecurityCallback;
+import org.olat.modules.lecture.LectureModule;
+import org.olat.modules.lecture.LectureService;
+import org.olat.modules.lecture.RepositoryEntryLectureConfiguration;
+import org.olat.modules.lecture.ui.LectureRepositoryAdminController;
+import org.olat.modules.lecture.ui.LecturesSecurityCallback;
+import org.olat.modules.lecture.ui.LecturesSecurityCallbackFactory;
+import org.olat.modules.lecture.ui.TeacherOverviewController;
 import org.olat.modules.reminder.ReminderModule;
 import org.olat.note.NoteController;
 import org.olat.repository.LeavingStatusList;
 import org.olat.repository.RepositoryEntry;
 import org.olat.repository.RepositoryEntryManagedFlag;
+import org.olat.repository.RepositoryEntryStatusEnum;
 import org.olat.repository.RepositoryManager;
 import org.olat.repository.controllers.EntryChangedEvent;
 import org.olat.repository.model.RepositoryEntrySecurity;
@@ -136,6 +142,7 @@ import org.olat.repository.ui.RepositoryEntryLifeCycleChangeController;
 import org.olat.repository.ui.RepositoryEntryLifeCycleChangeControllerFactory;
 import org.olat.repository.ui.RepositoryEntryRuntimeController;
 import org.olat.resource.OLATResource;
+import org.olat.search.SearchModule;
 import org.olat.search.SearchServiceUIFactory;
 import org.olat.search.SearchServiceUIFactory.DisplayOption;
 import org.olat.search.service.QuickSearchEvent;
@@ -164,40 +171,41 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		courseStatisticLink, surveyStatisticLink, testStatisticLink,
 		areaLink, dbLink,
 		//settings
-		layoutLink, optionsLink, certificatesOptionsLink, reminderLink,
+		lecturesAdminLink, reminderLink,
 		assessmentModeLink, lifeCycleChangeLink,
 		//my course
 		efficiencyStatementsLink, calendarLink, noteLink, chatLink, leaveLink, searchLink,
 		//glossary
-		openGlossaryLink, enableGlossaryLink;
+		openGlossaryLink, enableGlossaryLink, lecturesLink;
 	private Link currentUserCountLink;
 	private Dropdown myCourse, glossary;
 
 	private CloseableModalController cmc;
 	private CourseAreasController areasCtrl;
-	
 	private ConfirmLeaveController leaveDialogBox;
 	private ArchiverMainController archiverCtrl;
 	private CustomDBMainController databasesCtrl;
 	private FolderRunController courseFolderCtrl;
 	private SearchInputController searchController;
 	private StatisticMainController statisticsCtrl;
-	private CourseOptionsController optionsToolCtr;
 	private CourseRemindersController remindersCtrl;
+	private TeacherOverviewController lecturesCtrl;
 	private AssessmentToolController assessmentToolCtr;
 	private MembersManagementMainController membersCtrl;
 	private StatisticCourseNodesController statsToolCtr;
 	private AssessmentModeListController assessmentModeCtrl;
-	private CourseLayoutGeneratorController courseLayoutCtrl;
-	private CertificatesOptionsController certificatesOptionsCtrl;
+	private LectureRepositoryAdminController lecturesAdminCtrl;
 	private CloseableCalloutWindowController courseSearchCalloutCtr;
 	protected RepositoryEntryLifeCycleChangeController lifeCycleChangeCtr;
 
-	private int currentUserCount;
 	private Map<String, Boolean> courseRightsCache;
 
 	@Autowired
 	private CourseModule courseModule;
+	@Autowired
+	private LectureModule lectureModule;
+	@Autowired
+	private LectureService lectureService;
 	@Autowired
 	private ReminderModule reminderModule;
 	@Autowired
@@ -209,9 +217,11 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	@Autowired
 	private AssessmentModule assessmentModule;
 	@Autowired
+	private InstantMessagingModule imModule;
+	@Autowired
 	private CourseDBManager courseDBManager;
 	@Autowired
-	private ApplicationContext applicationContext;
+	private SearchModule searchModule;
 	
 	public CourseRuntimeController(UserRequest ureq, WindowControl wControl,
 			RepositoryEntry re, RepositoryEntrySecurity reSecurity, RuntimeControllerCreator runtimeControllerCreator,
@@ -261,8 +271,10 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		// group rights
 		UserCourseEnvironmentImpl uce = getUserCourseEnvironment();
 		if(uce != null) {
-			uce.setUserRoles(security.isEntryAdmin(), security.isCourseCoach() || security.isGroupCoach(), security.isCourseParticipant() || security.isGroupParticipant());
-			if(security.isReadOnly()) {
+			uce.setUserRoles(security.isEntryAdmin() || security.isPrincipal() || security.isMasterCoach(), security.isCoach(), security.isParticipant());
+			if(security.isOnlyPrincipal() || security.isOnlyMasterCoach()) {
+				uce.setCourseReadOnly(Boolean.TRUE);
+			} else if(security.isReadOnly()) {
 				if(overrideReadOnly) {
 					uce.setCourseReadOnly(Boolean.FALSE);
 				} else {
@@ -273,23 +285,24 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			}
 		}
 		
-		courseRightsCache = new HashMap<String, Boolean>();
+		courseRightsCache = new HashMap<>();
 		if(!security.isEntryAdmin() && !isGuestOnly) {
 			List<String> rights = cgm.getRights(getIdentity());
-			courseRightsCache.put(CourseRights.RIGHT_GROUPMANAGEMENT, new Boolean(rights.contains(CourseRights.RIGHT_GROUPMANAGEMENT)));
-			courseRightsCache.put(CourseRights.RIGHT_MEMBERMANAGEMENT, new Boolean(rights.contains(CourseRights.RIGHT_MEMBERMANAGEMENT)));
-			courseRightsCache.put(CourseRights.RIGHT_COURSEEDITOR, new Boolean(rights.contains(CourseRights.RIGHT_COURSEEDITOR)));
-			courseRightsCache.put(CourseRights.RIGHT_ARCHIVING, new Boolean(rights.contains(CourseRights.RIGHT_ARCHIVING)));
-			courseRightsCache.put(CourseRights.RIGHT_ASSESSMENT, new Boolean(rights.contains(CourseRights.RIGHT_ASSESSMENT)));
-			courseRightsCache.put(CourseRights.RIGHT_GLOSSARY, new Boolean(rights.contains(CourseRights.RIGHT_GLOSSARY)));
-			courseRightsCache.put(CourseRights.RIGHT_STATISTICS, new Boolean(rights.contains(CourseRights.RIGHT_STATISTICS)));
-			courseRightsCache.put(CourseRights.RIGHT_DB, new Boolean(rights.contains(CourseRights.RIGHT_DB)));
+			courseRightsCache.put(CourseRights.RIGHT_GROUPMANAGEMENT, Boolean.valueOf(rights.contains(CourseRights.RIGHT_GROUPMANAGEMENT)));
+			courseRightsCache.put(CourseRights.RIGHT_MEMBERMANAGEMENT, Boolean.valueOf(rights.contains(CourseRights.RIGHT_MEMBERMANAGEMENT)));
+			courseRightsCache.put(CourseRights.RIGHT_COURSEEDITOR, Boolean.valueOf(rights.contains(CourseRights.RIGHT_COURSEEDITOR)));
+			courseRightsCache.put(CourseRights.RIGHT_ARCHIVING, Boolean.valueOf(rights.contains(CourseRights.RIGHT_ARCHIVING)));
+			courseRightsCache.put(CourseRights.RIGHT_ASSESSMENT, Boolean.valueOf(rights.contains(CourseRights.RIGHT_ASSESSMENT)));
+			courseRightsCache.put(CourseRights.RIGHT_ASSESSMENT_MODE, Boolean.valueOf(rights.contains(CourseRights.RIGHT_ASSESSMENT_MODE)));
+			courseRightsCache.put(CourseRights.RIGHT_GLOSSARY, Boolean.valueOf(rights.contains(CourseRights.RIGHT_GLOSSARY)));
+			courseRightsCache.put(CourseRights.RIGHT_STATISTICS, Boolean.valueOf(rights.contains(CourseRights.RIGHT_STATISTICS)));
+			courseRightsCache.put(CourseRights.RIGHT_DB, Boolean.valueOf(rights.contains(CourseRights.RIGHT_DB)));
 		}
 	}
 
 	private boolean hasCourseRight(String right) {
 		Boolean bool = courseRightsCache.get(right);
-		return bool == null ? false : bool.booleanValue();
+		return bool != null && bool.booleanValue();
 	}
 	
 	private UserCourseEnvironmentImpl getUserCourseEnvironment() {
@@ -336,7 +349,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	
 	private boolean isInEditor() {
 		RunMainController run = getRunMainController();
-		return run == null ? false: run.isInEditor();
+		return run != null && run.isInEditor();
 	}
 	
 	private void setIsInEditor(boolean editor) {
@@ -393,105 +406,193 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			cc.removeCurrentCustomCSSFromView();
 		}
 		setCustomCSS(null);
+		setCourseClosedMessage(getUserCourseEnvironment());
 	}
 
 	@Override
-	protected void initToolbar(Dropdown toolsDropdown, Dropdown settingsDropdown) {
-		toolbarPanel.removeAllTools();
+	protected void initToolbar(Dropdown toolsDropdown) {
+		toolsDropdown.removeAllComponents();
 		if(corrupted) return;
 		
 		ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
 		UserCourseEnvironmentImpl uce = getUserCourseEnvironment();
 		
-		if(!course.getCourseConfig().isToolbarEnabled() && !reSecurity.isEntryAdmin() && !reSecurity.isCourseCoach() && !reSecurity.isGroupCoach()
+		if(!course.getCourseConfig().isToolbarEnabled() && !reSecurity.isEntryAdmin() && !reSecurity.isCoach()
 				&& !hasCourseRight(CourseRights.RIGHT_COURSEEDITOR) && !hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT)
 				&& !hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT) && !hasCourseRight(CourseRights.RIGHT_ARCHIVING)
 					&& !hasCourseRight(CourseRights.RIGHT_STATISTICS) && !hasCourseRight(CourseRights.RIGHT_DB)
-					&& !hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
+					&& !hasCourseRight(CourseRights.RIGHT_ASSESSMENT) && !hasCourseRight(CourseRights.RIGHT_ASSESSMENT_MODE)) {
 			toolbarPanel.setToolbarEnabled(false);
 		} else {
 			toolbarPanel.setToolbarEnabled(true);
 		}
-		
-		if(!isAssessmentLock()) {
-			initTools(toolsDropdown, course, uce);
-			initSettingsTools(settingsDropdown);
-			initEditionTools(settingsDropdown);
-			initDeleteTools(settingsDropdown, true);
+		// make bread crumb disappear if not enabled
+		if (!course.getCourseConfig().isBreadCrumbEnabled() && !toolbarPanel.isToolbarEnabled()) {
+			// disable if toolbar also not visible
+			toolbarPanel.setBreadcrumbEnabled(false);
 		}
+		
+		initToolsMenu(toolsDropdown);
 		initToolsMyCourse(course, uce);
 		initGeneralTools(course);
 		
-		if(getRunMainController() != null) {
-			getRunMainController().initToolbar();
+		RunMainController rmc = getRunMainController();
+		if(rmc != null) {
+			rmc.initToolbar();
 		}
-		
-		if(uce != null && uce.isCourseReadOnly()) {
+		setCourseClosedMessage(uce);
+	}
+	
+	private void setCourseClosedMessage(UserCourseEnvironment uce) {
+		if(uce != null &&  getRepositoryEntry().getEntryStatus() == RepositoryEntryStatusEnum.closed) {
 			toolbarPanel.setMessage(translate("course.closed"));
 			toolbarPanel.setMessageCssClass("o_warning");
 		} else {
 			toolbarPanel.setMessage(null);
+			toolbarPanel.setMessageComponent(null);
 		}
 	}
 	
-	private void initTools(Dropdown tools, ICourse course, final UserCourseEnvironmentImpl uce) {
+	@Override
+	protected void initToolsMenu(Dropdown toolsDropdown) {
+		toolsDropdown.removeAllComponents();
+		toolsDropdown.setDirty(true);
+		
+		if(!isAssessmentLock()) {
+			ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
+			UserCourseEnvironmentImpl uce = getUserCourseEnvironment();
+			
+			initToolsMenuSettings(toolsDropdown);
+			initToolsMenuEditor(toolsDropdown, uce);
+			initToolsMenuRuntime(toolsDropdown, uce);
+			initToolsMenuStatistics(toolsDropdown, course, uce);
+			initToolsMenuEdition(toolsDropdown);
+			initToolsMenuDelete(toolsDropdown);
+		}
+	}
+	
+	@Override
+	protected void initToolsMenuSettings(Dropdown tools) {
 		// 1) administrative tools
-		if (reSecurity.isEntryAdmin() || reSecurity.isCourseCoach() || reSecurity.isGroupCoach()
+		if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach()
 				|| hasCourseRight(CourseRights.RIGHT_COURSEEDITOR) || hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT)
-				|| hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT) || hasCourseRight(CourseRights.RIGHT_ARCHIVING)
-				|| hasCourseRight(CourseRights.RIGHT_STATISTICS) || hasCourseRight(CourseRights.RIGHT_DB)
-				|| hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
+				|| hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT)) {
 
 			tools.setI18nKey("header.tools");
 			tools.setElementCssClass("o_sel_course_tools");
-
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				boolean managed = RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.editcontent);
-				boolean readOnly = uce.isCourseReadOnly();
-				editLink = LinkFactory.createToolLink("edit.cmd", translate("command.openeditor"), this, "o_icon_courseeditor");
-				editLink.setElementCssClass("o_sel_course_editor");
-				editLink.setEnabled(!corrupted && !managed);
-				editLink.setVisible(!readOnly);
-				tools.addComponent(editLink);
-				
-				folderLink = LinkFactory.createToolLink("cfd", translate("command.coursefolder"), this, "o_icon_coursefolder");
-				folderLink.setElementCssClass("o_sel_course_folder");
-				tools.addComponent(folderLink);
-				tools.addComponent(new Spacer(""));
+			
+			if(reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
+				settingsLink = LinkFactory.createToolLink("settings", translate("details.settings"), this, "o_sel_repo_settings");
+				settingsLink.setIconLeftCSS("o_icon o_icon-fw o_icon_settings");
+				settingsLink.setElementCssClass("o_sel_course_settings");
+				tools.addComponent(settingsLink);
 			}
 			
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT) || hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT)) {
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT) || hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT)) {
 				membersLink = LinkFactory.createToolLink("unifiedusermngt", translate("command.opensimplegroupmngt"), this, "o_icon_membersmanagement");
 				membersLink.setElementCssClass("o_sel_course_members");
 				tools.addComponent(membersLink);
 			}
-			if (reSecurity.isEntryAdmin() || reSecurity.isCourseCoach() || reSecurity.isGroupCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
+			tools.addComponent(new Spacer("first"));
+		}
+	}
+	
+	private void initToolsMenuEditor(Dropdown tools, final UserCourseEnvironmentImpl uce) {
+		if(uce == null) return;
+		
+		if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
+			boolean managed = RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.editcontent);
+			boolean readOnly = uce.isCourseReadOnly();
+			editLink = LinkFactory.createToolLink("edit.cmd", translate("command.openeditor"), this, "o_icon_courseeditor");
+			editLink.setElementCssClass("o_sel_course_editor");
+			editLink.setEnabled(!corrupted && !managed);
+			editLink.setVisible(!readOnly);
+			tools.addComponent(editLink);
+		}
+			
+		if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
+			folderLink = LinkFactory.createToolLink("cfd", translate("command.coursefolder"), this, "o_icon_coursefolder");
+			folderLink.setElementCssClass("o_sel_course_folder");
+			tools.addComponent(folderLink);
+			tools.addComponent(new Spacer(""));
+		}
+	}
+	
+	private void initToolsMenuRuntime(Dropdown tools, final UserCourseEnvironmentImpl uce) {
+		boolean courseAuthorRight = reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR);
+		if (courseAuthorRight || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach()
+				|| hasCourseRight(CourseRights.RIGHT_DB)
+				|| hasCourseRight(CourseRights.RIGHT_ASSESSMENT) || hasCourseRight(CourseRights.RIGHT_ASSESSMENT_MODE)) {	
+
+			tools.addComponent(new Spacer(""));
+			
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
 				assessmentLink = LinkFactory.createToolLink("assessment", translate("command.openassessment"), this, "o_icon_assessment_tool");
 				assessmentLink.setElementCssClass("o_sel_course_assessment_tool");
 				tools.addComponent(assessmentLink);
 			}
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_ARCHIVING)) {
-				archiverLink = LinkFactory.createToolLink("archiver", translate("command.openarchiver"), this, "o_icon_archive_tool");
-				tools.addComponent(archiverLink);
+			
+			if(lectureModule.isEnabled() && (courseAuthorRight || reSecurity.isPrincipal() || reSecurity.isMasterCoach()) && isLectureEnabled()) {
+				lecturesAdminLink = LinkFactory.createToolLink("lectures.admin.cmd", translate("command.options.lectures.admin"), this, "o_icon_lecture");
+				lecturesAdminLink.setElementCssClass("o_sel_course_lectures_admin");
+				lecturesAdminLink.setVisible(!uce.isCourseReadOnly());
+				tools.addComponent(lecturesAdminLink);
 			}
 			
+			if(reminderModule.isEnabled() && courseAuthorRight) {
+				reminderLink = LinkFactory.createToolLink("reminders.cmd", translate("command.options.reminders"), this, "o_icon_reminder");
+				reminderLink.setElementCssClass("o_sel_course_reminders");
+				reminderLink.setVisible(!uce.isCourseReadOnly());
+				tools.addComponent(reminderLink);
+			}
+			
+			if (courseAuthorRight || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT_MODE)) {
+				//course author right or the assessment mode access right 
+				boolean managed = RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.editcontent);
+				assessmentModeLink = LinkFactory.createToolLink("assessment.mode.cmd", translate("command.assessment.mode"), this, "o_icon_assessment_mode");
+				assessmentModeLink.setElementCssClass("o_sel_course_assessment_mode");
+				assessmentModeLink.setEnabled(!managed);
+				assessmentModeLink.setVisible(assessmentModule.isAssessmentModeEnabled() && !uce.isCourseReadOnly());
+				tools.addComponent(assessmentModeLink);
+			}
+
+			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
+				areaLink = LinkFactory.createToolLink("careas", translate("command.courseareas"), this, "o_icon_courseareas");
+				areaLink.setElementCssClass("o_sel_course_areas");
+				tools.addComponent(areaLink);
+			}
+			
+			if (courseDBManager.isEnabled() && (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_DB))) {
+				dbLink = LinkFactory.createToolLink("customDb",translate("command.opendb"), this, "o_icon_coursedb");
+				tools.addComponent(dbLink);
+			}
+		}
+	}
+	
+	private boolean isLectureEnabled() {
+		RepositoryEntryLectureConfiguration lectureConfig = lectureService.getRepositoryEntryLectureConfiguration(getRepositoryEntry());
+		return lectureConfig != null && lectureConfig.isLectureEnabled();
+	}
+	
+	private void initToolsMenuStatistics(Dropdown tools, ICourse course, final UserCourseEnvironmentImpl uce) {
+		if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach()
+				|| hasCourseRight(CourseRights.RIGHT_ARCHIVING) || hasCourseRight(CourseRights.RIGHT_STATISTICS)) {	
+
 			tools.addComponent(new Spacer(""));
 			
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_STATISTICS)) {
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_STATISTICS)) {
 				courseStatisticLink = LinkFactory.createToolLink("statistic",translate("command.openstatistic"), this, "o_icon_statistics_tool");
 				tools.addComponent(courseStatisticLink);
 			}
-			if (uce != null && (reSecurity.isEntryAdmin() || reSecurity.isCourseCoach() || reSecurity.isGroupCoach() || hasCourseRight(CourseRights.RIGHT_STATISTICS))) {
+			
+			if (uce != null && (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach() || hasCourseRight(CourseRights.RIGHT_STATISTICS))) {
 				final AtomicInteger testNodes = new AtomicInteger();
 				final AtomicInteger surveyNodes = new AtomicInteger();
-				new TreeVisitor(new Visitor() {
-					@Override
-					public void visit(INode node) {
-						if(((CourseNode)node).isStatisticNodeResultAvailable(uce, QTIType.test, QTIType.onyx)) {
-							testNodes.incrementAndGet();
-						} else if(((CourseNode)node).isStatisticNodeResultAvailable(uce, QTIType.survey)) {
-							surveyNodes.incrementAndGet();
-						}
+				new TreeVisitor(node -> {
+					if(((CourseNode)node).isStatisticNodeResultAvailable(uce, StatisticType.TEST)) {
+						testNodes.incrementAndGet();
+					} else if(((CourseNode)node).isStatisticNodeResultAvailable(uce, StatisticType.SURVEY)) {
+						surveyNodes.incrementAndGet();
 					}
 				}, course.getRunStructure().getRootNode(), true).visitAll();
 				if(testNodes.intValue() > 0) {
@@ -504,16 +605,10 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 					tools.addComponent(surveyStatisticLink);
 				}
 			}
-			tools.addComponent(new Spacer(""));
 
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				areaLink = LinkFactory.createToolLink("careas", translate("command.courseareas"), this, "o_icon_courseareas");
-				areaLink.setElementCssClass("o_sel_course_areas");
-				tools.addComponent(areaLink);
-			}
-			if (courseDBManager.isEnabled() && (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_DB))) {
-				dbLink = LinkFactory.createToolLink("customDb",translate("command.opendb"), this, "o_icon_coursedb");
-				tools.addComponent(dbLink);
+			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_ARCHIVING)) {
+				archiverLink = LinkFactory.createToolLink("archiver", translate("command.openarchiver"), this, "o_icon_archive_tool");
+				tools.addComponent(archiverLink);
 			}
 			
 			ordersLink = LinkFactory.createToolLink("bookings", translate("details.orders"), this, "o_sel_repo_booking");
@@ -524,66 +619,9 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			tools.addComponent(ordersLink);
 		}
 	}
-	
-	@Override
-	protected void initSettingsTools(Dropdown settings) {
-		if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-			boolean managed = RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.editcontent);
-			UserCourseEnvironment uce = getUserCourseEnvironment();
-			
-			settings.setElementCssClass("o_sel_course_settings");
-			
-			editDescriptionLink = LinkFactory.createToolLink("settings.cmd", translate("command.settings"), this, "o_icon_details");
-			editDescriptionLink.setElementCssClass("o_sel_course_settings");
-			editDescriptionLink.setEnabled(!managed);
-			settings.addComponent(editDescriptionLink);
-			
-			accessLink = LinkFactory.createToolLink("access.cmd", translate("command.access"), this, "o_icon_password");
-			accessLink.setElementCssClass("o_sel_course_access");
-			accessLink.setEnabled(!managed);
-			settings.addComponent(accessLink);
-			
-			assessmentModeLink = LinkFactory.createToolLink("assessment.mode.cmd", translate("command.assessment.mode"), this, "o_icon_assessment_mode");
-			assessmentModeLink.setElementCssClass("o_sel_course_assessment_mode");
-			assessmentModeLink.setEnabled(!managed);
-			assessmentModeLink.setVisible(assessmentModule.isAssessmentModeEnabled() && !uce.isCourseReadOnly());
-			settings.addComponent(assessmentModeLink);
-			
-			catalogLink = LinkFactory.createToolLink("access.cmd", translate("command.catalog"), this, "o_icon_catalog");
-			catalogLink.setElementCssClass("o_sel_course_catalog");
-			catalogLink.setVisible(repositoryModule.isCatalogEnabled() && !uce.isCourseReadOnly());
-			settings.addComponent(catalogLink);
-			
-			settings.addComponent(new Spacer(""));
-			
-			boolean layoutManaged = RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.layout);
-			layoutLink = LinkFactory.createToolLink("access.cmd", translate("command.layout"), this, "o_icon_layout");
-			layoutLink.setElementCssClass("o_sel_course_layout");
-			layoutLink.setEnabled(!layoutManaged);
-			layoutLink.setVisible(!uce.isCourseReadOnly());
-			settings.addComponent(layoutLink);
-			
-			optionsLink = LinkFactory.createToolLink("access.cmd", translate("command.options"), this, "o_icon_options");
-			optionsLink.setElementCssClass("o_sel_course_options");
-			optionsLink.setVisible(!uce.isCourseReadOnly());
-			settings.addComponent(optionsLink);
-			
-			certificatesOptionsLink = LinkFactory.createToolLink("certificates.cmd", translate("command.options.certificates"), this, "o_icon_certificate");
-			certificatesOptionsLink.setElementCssClass("o_sel_course_options_certificates");
-			certificatesOptionsLink.setVisible(!uce.isCourseReadOnly());
-			settings.addComponent(certificatesOptionsLink);
-			
-			if(reminderModule.isEnabled()) {
-				reminderLink = LinkFactory.createToolLink("reminders.cmd", translate("command.options.reminders"), this, "o_icon_reminder");
-				reminderLink.setElementCssClass("o_sel_course_reminders");
-				reminderLink.setVisible(!uce.isCourseReadOnly());
-				settings.addComponent(reminderLink);
-			}
-		}
-	}
 
 	@Override
-	protected void initDeleteTools(Dropdown settingsDropdown, boolean needSpacer) {
+	protected void initToolsMenuDelete(Dropdown settingsDropdown) {
 		RepositoryEntry re = getRepositoryEntry();
 		boolean closeManged = RepositoryEntryManagedFlag.isManaged(re, RepositoryEntryManagedFlag.close);
 		
@@ -657,12 +695,12 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		}
 
 		if(uce != null) {
-			if(myCourse.size() > 0 && (uce.getCoachedGroups().size() > 0 || uce.getParticipatingGroups().size() > 0 || uce.getWaitingLists().size() > 0)) {
+			if(myCourse.size() > 0 && (!uce.getCoachedGroups().isEmpty() || !uce.getParticipatingGroups().isEmpty() || !uce.getWaitingLists().isEmpty())) {
 				myCourse.addComponent(new Spacer(""));
 			}
 			
 			// 2) add coached groups
-			if (uce.getCoachedGroups().size() > 0) {
+			if (!uce.getCoachedGroups().isEmpty()) {
 				for (BusinessGroup group:uce.getCoachedGroups()) {
 					Link link = LinkFactory.createToolLink(CMD_START_GROUP_PREFIX + group.getKey(), "groupadmin", StringHelper.escapeHtml(group.getName()), this);
 					link.setIconLeftCSS("o_icon o_icon-fw o_icon_settings");
@@ -674,7 +712,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			}
 	
 			// 3) add participating groups
-			if (uce.getParticipatingGroups().size() > 0) {
+			if (!uce.getParticipatingGroups().isEmpty()) {
 				for (BusinessGroup group: uce.getParticipatingGroups()) {
 					Link link = LinkFactory.createToolLink(CMD_START_GROUP_PREFIX + group.getKey(), "group", StringHelper.escapeHtml(group.getName()), this);
 					link.setIconLeftCSS("o_icon o_icon-fw o_icon_group");
@@ -685,7 +723,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			}
 	
 			// 5) add waiting-list groups
-			if (uce.getWaitingLists().size() > 0) {
+			if (!uce.getWaitingLists().isEmpty()) {
 				for (BusinessGroup group:uce.getWaitingLists()) {
 					int pos = businessGroupService.getPositionInWaitingListFor(getIdentity(), group);
 					String name = StringHelper.escapeHtml(group.getName()) + " (" + pos + ")";
@@ -712,24 +750,21 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	}
 	
 	private boolean isAllowedToLeave(UserCourseEnvironmentImpl uce) {
-		if(uce.getParticipatingGroups().size() > 0) {
+		if(!uce.getParticipatingGroups().isEmpty()) {
 			CourseNode rootNode = uce.getCourseEnvironment().getRunStructure().getRootNode();
 			OLATResource courseResource = uce.getCourseEnvironment().getCourseGroupManager().getCourseResource();
 			
 			AtomicBoolean bool = new AtomicBoolean(false);
-			new TreeVisitor(new Visitor() {
-				@Override
-				public void visit(INode node) {
-					if(!bool.get() && node instanceof ENCourseNode) {
-						try {
-							ENCourseNode enNode = (ENCourseNode)node;
-							boolean cancelEnrollEnabled = enNode.getModuleConfiguration().getBooleanSafe(ENCourseNode.CONF_CANCEL_ENROLL_ENABLED);
-							if(!cancelEnrollEnabled && enNode.isUsedForEnrollment(uce.getParticipatingGroups(), courseResource)) {
-								bool.set(true);
-							}
-						} catch (Exception e) {
-							logError("", e);
+			new TreeVisitor(node -> {
+				if(!bool.get() && node instanceof ENCourseNode) {
+					try {
+						ENCourseNode enNode = (ENCourseNode)node;
+						boolean cancelEnrollEnabled = enNode.getModuleConfiguration().getBooleanSafe(ENCourseNode.CONF_CANCEL_ENROLL_ENABLED);
+						if(!cancelEnrollEnabled && enNode.isUsedForEnrollment(uce.getParticipatingGroups(), courseResource)) {
+							bool.set(true);
 						}
+					} catch (Exception e) {
+						logError("", e);
 					}
 				}
 			}, rootNode, true).visitAll();
@@ -743,6 +778,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	
 	private void initGeneralTools(ICourse course) {
 		boolean assessmentLock = isAssessmentLock();
+		UserCourseEnvironment userCourseEnv = getUserCourseEnvironment();
 
 		CourseConfig cc = course.getCourseConfig();
 		if (!assessmentLock && showInfos) {
@@ -752,7 +788,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		
 		boolean calendarIsEnabled =  !assessmentLock && !isGuestOnly && calendarModule.isEnabled()
 				&& calendarModule.isEnableCourseToolCalendar() && reSecurity.canLaunch();
-		if (calendarIsEnabled && getUserCourseEnvironment() != null) {
+		if (calendarIsEnabled && userCourseEnv != null) {
 			calendarLink = LinkFactory.createToolLink("calendar",translate("command.calendar"), this, "o_icon_calendar");
 			calendarLink.setPopup(new LinkPopupSettings(950, 750, "cal"));
 			calendarLink.setVisible(cc.isCalendarEnabled());
@@ -762,38 +798,51 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		if(!assessmentLock) {
 			glossary = new Dropdown("glossary", "command.glossary", false, getTranslator());
 			glossary.setIconCSS("o_icon o_FileResource-GLOSSARY_icon");
-			// OLATNG-335 : check if glossary repo entry really exists before showing the dropdown
-			if (null != RepositoryManager.getInstance().lookupRepositoryEntryBySoftkey(cc.getGlossarySoftKey(), false)) {
-				glossary.setVisible(cc.hasGlossary());
-
-				openGlossaryLink = LinkFactory.createToolLink("command.glossary.open", translate("command.glossary.open"), this);
-				openGlossaryLink.setPopup(new LinkPopupSettings(950, 750, "gloss"));
-				glossary.addComponent(openGlossaryLink);
-
-				enableGlossaryLink = LinkFactory.createToolLink("command.glossary.on.off", translate("command.glossary.on.alt"), this);
-				glossary.addComponent(enableGlossaryLink);
-				toolbarPanel.addTool(glossary);
-			}
+			glossary.setVisible(cc.hasGlossary() && cc.isGlossaryEnabled());
+	
+			openGlossaryLink = LinkFactory.createToolLink("command.glossary.open", translate("command.glossary.open"), this);
+			openGlossaryLink.setPopup(new LinkPopupSettings(950, 750, "gloss"));
+			glossary.addComponent(openGlossaryLink);
+	
+			enableGlossaryLink = LinkFactory.createToolLink("command.glossary.on.off", translate("command.glossary.on.alt"), this);
+			glossary.addComponent(enableGlossaryLink);
+			toolbarPanel.addTool(glossary);
+		}
+		
+		if(!assessmentLock && isLecturesLinkEnabled()) {
+			lecturesLink = LinkFactory.createToolLink("command.lectures", translate("command.lectures"), this, "o_icon_lecture");
+			toolbarPanel.addTool(lecturesLink);
 		}
 		
 		//add group chat to toolbox
-		InstantMessagingModule imModule = CoreSpringFactory.getImpl(InstantMessagingModule.class);
 		boolean chatIsEnabled = !assessmentLock && !isGuestOnly && imModule.isEnabled()
 				&& imModule.isCourseEnabled() && reSecurity.canLaunch();
-		if(chatIsEnabled && getUserCourseEnvironment() != null && !getUserCourseEnvironment().isCourseReadOnly()) {
+		if(chatIsEnabled && userCourseEnv != null && !userCourseEnv.isCourseReadOnly()) {
 			chatLink = LinkFactory.createToolLink("chat",translate("command.coursechat"), this, "o_icon_chat");
 			chatLink.setVisible(imModule.isCourseEnabled() && cc.isChatEnabled());
 			toolbarPanel.addTool(chatLink);
 		}
 		
 		// add course search to toolbox 
-		boolean isSearchEnabled = !assessmentLock && !isGuestOnly;
+		boolean isSearchEnabled = !assessmentLock && searchModule.isSearchAllowed(roles);
 		if (isSearchEnabled) {
 			searchLink = LinkFactory.createToolLink("coursesearch", translate("command.coursesearch"), this, "o_icon_search");
 			searchLink.setVisible(cc.isCourseSearchEnabled());
 			toolbarPanel.addTool(searchLink);
 		}
-		
+	}
+	
+	//check the configuration enable the lectures and the user is a teacher 
+	private boolean isLecturesLinkEnabled() {
+		if(lectureModule.isEnabled()) {
+			if(reSecurity.isEntryAdmin()) {
+				return lectureService.isRepositoryEntryLectureEnabled(getRepositoryEntry());
+			} else {
+				//check the configuration enable the lectures and the user is a teacher 
+				return lectureService.hasLecturesAsTeacher(getRepositoryEntry(), getIdentity());
+			}
+		}
+		return false;
 	}
 
 	@Override
@@ -851,72 +900,80 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 
 	@Override
 	protected void event(UserRequest ureq, Component source, Event event) {
-		try {
-			if(layoutLink == source) {
-				doLayout(ureq);
-			} else if(optionsLink == source) {
-				doOptions(ureq);
-			} else if(assessmentModeLink == source) {
-				doAssessmentMode(ureq);
-			} else if(certificatesOptionsLink == source) {
-				doCertificatesOptions(ureq);
-			} else if (lifeCycleChangeLink == source) {
-				doLifeCycleChange(ureq);
-			} else if(reminderLink == source) {
-				doReminders(ureq);
-			} else if(archiverLink == source) {
-				doArchive(ureq);
-			} else if(folderLink == source) {
-				doCourseFolder(ureq);
-			} else if(areaLink == source) {
-				doCourseAreas(ureq);
-			} else if(dbLink == source) {
-				doDatabases(ureq);
-			} else if(courseStatisticLink == source) {
-				doCourseStatistics(ureq);
-			} else if(testStatisticLink == source) {
-				doAssessmentTestStatistics(ureq);
-			} else if(surveyStatisticLink == source) {
-				doAssessmentSurveyStatistics(ureq);
-			} else if(assessmentLink == source) {
-				doAssessmentTool(ureq);
-			} else if(calendarLink == source) {
-				launchCalendar(ureq);
-			} else if(chatLink == source) {
-				launchChat(ureq);
-			} else if(searchLink == source) {
-				launchCourseSearch(ureq);
-			} else if(efficiencyStatementsLink == source) {
-				doEfficiencyStatements(ureq);
-			} else if(noteLink == source) {
-				launchPersonalNotes(ureq);
-			} else if(openGlossaryLink == source) {
-				launchGlossary(ureq);
-			} else if(leaveLink == source) {
-				doConfirmLeave(ureq);
-			} else if(source instanceof Link) {
-				if ("group".equals(((Link)source).getCommand())) {
-					BusinessGroupRef ref = (BusinessGroupRef) ((Link) source).getUserObject();
-					launchGroup(ureq, ref.getKey(), "", "");
-				} else if(("groupadmin".equals(((Link)source).getCommand()))) {
-					BusinessGroupRef ref = (BusinessGroupRef) ((Link) source).getUserObject();
-					launchGroup(ureq, ref.getKey(), "tooladmin", "2");
-				}
-			} else if(source == toolbarPanel) {
-				if(event instanceof VetoPopEvent) {
-					delayedClose = Delayed.pop;
-				} else if(event instanceof PopEvent) {
-					PopEvent pop = (PopEvent)event;
-					if(pop.getController() != getRunMainController()) {
-						toolControllerDone(ureq);
-					}
-				}
-			} else if(enableGlossaryLink == source) {
-				toggleGlossary(ureq);
+		if(assessmentModeLink == source) {
+			doAssessmentMode(ureq);
+		} else if (lifeCycleChangeLink == source) {
+			doLifeCycleChange(ureq);
+		} else if(reminderLink == source) {
+			doReminders(ureq);
+		} else if(lecturesAdminLink == source) {
+			doLecturesAdmin(ureq);
+		} else if(lecturesLink == source) {
+			doLectures(ureq);
+		} else if(archiverLink == source) {
+			doArchive(ureq);
+		} else if(folderLink == source) {
+			doCourseFolder(ureq);
+		} else if(areaLink == source) {
+			doCourseAreas(ureq);
+		} else if(dbLink == source) {
+			doDatabases(ureq);
+		} else if(courseStatisticLink == source) {
+			doCourseStatistics(ureq);
+		} else if(testStatisticLink == source) {
+			doAssessmentTestStatistics(ureq);
+		} else if(surveyStatisticLink == source) {
+			doAssessmentSurveyStatistics(ureq);
+		} else if(assessmentLink == source) {
+			doAssessmentTool(ureq);
+		} else if(calendarLink == source) {
+			launchCalendar(ureq);
+		} else if(chatLink == source) {
+			launchChat(ureq);
+		} else if(searchLink == source) {
+			launchCourseSearch(ureq);
+		} else if(efficiencyStatementsLink == source) {
+			doEfficiencyStatements(ureq);
+		} else if(noteLink == source) {
+			launchPersonalNotes(ureq);
+		} else if(openGlossaryLink == source) {
+			launchGlossary(ureq);
+		} else if(leaveLink == source) {
+			doConfirmLeave(ureq);
+		} else if(source instanceof Link && "group".equals(((Link)source).getCommand())) {
+			BusinessGroupRef ref = (BusinessGroupRef)((Link)source).getUserObject();
+			launchGroup(ureq, ref.getKey());
+		} else if(source == toolbarPanel) {
+			if(event instanceof VetoPopEvent) {
+				delayedClose = Delayed.pop;
+			} else if(event instanceof PopEvent) {
+				processPopEvent(ureq, (PopEvent)event);
 			}
 			super.event(ureq, source, event);
 		} catch (CorruptedCourseException e) {
 			showError("error.course.corrupted.or.does.not.exist.anymore");
+		}
+		
+		// Update window title
+		if (source instanceof Link) {
+			Link link = (Link) source;
+			ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
+			String newTitle = course.getCourseTitle() + " - " + link.getI18n();
+			getWindowControl().getWindowBackOffice().getWindow().setTitle(getTranslator(), newTitle);						
+		}
+		
+		super.event(ureq, source, event);
+	}
+	
+	@Override
+	protected void processPopEvent(UserRequest ureq, PopEvent pop) {
+		super.processPopEvent(ureq, pop);
+		
+		if(pop.getController() == assessmentToolCtr) {
+			setCourseClosedMessage(getUserCourseEnvironment());
+		}
+		if(pop.getController() != getRunMainController()) {
+			toolControllerDone(ureq);
 		}
 	}
 
@@ -930,28 +987,13 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			if (event == RepositoryEntryLifeCycleChangeController.deletedEvent) {
 				doClose(ureq);
 				cleanUp();	
-			} else if (event == RepositoryEntryLifeCycleChangeController.closedEvent
-					|| event == RepositoryEntryLifeCycleChangeController.unclosedEvent) {
-				processClosedUnclosedEvent(ureq);
 			}
-		}else if (currentToolCtr == source) {
+		} else if (currentToolCtr == source) {
 			if (event == Event.DONE_EVENT) {
 				// special check for editor
 				toolControllerDone(ureq);
 			}
-		} else if(optionsToolCtr == source) {
-			if(event == Event.CHANGED_EVENT) {
-				initToolbar();
-				toolControllerDone(ureq);
-			}
-		} else if(accessCtrl == source) {
-			if(event == Event.CHANGED_EVENT) {
-				initToolbar();
-				toolControllerDone(ureq);
-			} else if(event == Event.CLOSE_EVENT) {
-				doClose(ureq);
-			}
-		} else if(source == leaveDialogBox) {
+		}  else if(source == leaveDialogBox) {
 			if (event.equals(Event.DONE_EVENT)) {
 				doLeave(ureq);
 			}else{
@@ -967,25 +1009,22 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			if(event == Event.DONE_EVENT) {
 				if(delayedClose != null) {
 					switch(delayedClose) {
-						case access: doAccess(ureq); break;
 						case archive: doArchive(ureq); break;
 						case assessmentMode: doAssessmentMode(ureq); break;
 						case assessmentSurveyStatistics: doAssessmentSurveyStatistics(ureq); break;
 						case assessmentTestStatistics: doAssessmentTestStatistics(ureq); break;
 						case assessmentTool: doAssessmentTool(ureq); break;
-						case certificates: doCertificatesOptions(ureq); break;
 						case reminders: doReminders(ureq); break;
+						case lecturesAdmin: doLecturesAdmin(ureq); break;
+						case lectures: doLectures(ureq); break;
 						case courseAreas: doCourseAreas(ureq); break;
 						case courseFolder: doCourseFolder(ureq); break;
 						case courseStatistics: doCourseStatistics(ureq); break;
 						case databases: doDatabases(ureq); break;
 						case details: doDetails(ureq); break;
-						case editSettings: doEditSettings(ureq); break;
+						case settings: doSettings(ureq, null); break;
 						case efficiencyStatements: doEfficiencyStatements(ureq); break;
-						case catalog: doCatalog(ureq); break;
-						case layout: doLayout(ureq); break;
 						case members: doMembers(ureq); break;
-						case options: doOptions(ureq); break;
 						case orders: doOrders(ureq); break;
 						case close: doClose(ureq); break;
 						case pop: popToRoot(ureq); cleanUp(); break;
@@ -1005,8 +1044,6 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		removeAsListenerAndDispose(lifeCycleChangeCtr);
 		removeAsListenerAndDispose(assessmentToolCtr);
 		removeAsListenerAndDispose(courseFolderCtrl);
-		removeAsListenerAndDispose(courseLayoutCtrl);
-		removeAsListenerAndDispose(optionsToolCtr);
 		removeAsListenerAndDispose(statisticsCtrl);
 		removeAsListenerAndDispose(databasesCtrl);
 		removeAsListenerAndDispose(archiverCtrl);
@@ -1017,8 +1054,6 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		lifeCycleChangeCtr = null;
 		assessmentToolCtr = null;
 		courseFolderCtrl = null;
-		courseLayoutCtrl = null;
-		optionsToolCtr = null;
 		statisticsCtrl = null;
 		databasesCtrl = null;
 		archiverCtrl = null;
@@ -1046,7 +1081,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		}
 
 		entries = removeRepositoryEntry(entries);
-		if(entries != null && entries.size() > 0) {
+		if(entries != null && !entries.isEmpty()) {
 			String type = entries.get(0).getOLATResourceable().getResourceableTypeName();
 			if("Payment".equalsIgnoreCase(type)) {
 				doPostSuccessfullAccess(ureq);
@@ -1054,20 +1089,32 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 				if (!isInEditor() && !RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.editcontent)) {
 					doEdit(ureq);
 				}
-			} else if("Catalog".equalsIgnoreCase(type)) {
-				doCatalog(ureq);
 			} else if("Infos".equalsIgnoreCase(type)) {
 				doDetails(ureq);	
-			} else if("EditDescription".equalsIgnoreCase(type) || "Settings".equalsIgnoreCase(type)) {
-				doEditSettings(ureq);
-			} else if("Settings".equalsIgnoreCase(type)) {
-				doOptions(ureq);
-			} else if("CertificationSettings".equalsIgnoreCase(type)) {
-				doCertificatesOptions(ureq);
+			} else if("Settings".equalsIgnoreCase(type) || "EditDescription".equalsIgnoreCase(type)) {
+				List<ContextEntry> subEntries = entries.subList(1, entries.size());
+				doSettings(ureq, subEntries);
 			} else if("Certification".equalsIgnoreCase(type)) {
 				doEfficiencyStatements(ureq);
 			} else if("Reminders".equalsIgnoreCase(type) || "RemindersLogs".equalsIgnoreCase(type)) {
 				doReminders(ureq);
+			} else if("Lectures".equalsIgnoreCase(type)) {
+				Activateable2 lectures = doLectures(ureq);
+				if(lectures != null) {
+					List<ContextEntry> subEntries = entries.subList(1, entries.size());
+					lectures.activate(ureq, subEntries, entries.get(0).getTransientState());
+				}
+			} else if("LectureBlock".equalsIgnoreCase(type)) {
+				Activateable2 lectures = doLectures(ureq);
+				if(lectures != null) {
+					lectures.activate(ureq, entries, state);
+				}
+			} else if("LecturesAdmin".equalsIgnoreCase(type)) {
+				Activateable2 lecturesAdmin = doLecturesAdmin(ureq);
+				if(lecturesAdmin != null) {
+					List<ContextEntry> subEntries = entries.subList(1, entries.size());
+					lecturesAdmin.activate(ureq, subEntries, entries.get(0).getTransientState());
+				}
 			} else if("MembersMgmt".equalsIgnoreCase(type)) {
 				Activateable2 members = doMembers(ureq);
 				if(members != null) {
@@ -1080,7 +1127,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 				}	
 			} else if ("assessmentTool".equalsIgnoreCase(type) || "assessmentToolv2".equalsIgnoreCase(type)) {
 				//check the security before, the link is perhaps in the wrong hands
-				if(reSecurity.isEntryAdmin() || reSecurity.isCourseCoach() || reSecurity.isGroupCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
+				if(reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
 					try {
 						Activateable2 assessmentCtrl = doAssessmentTool(ureq);
 						if(assessmentCtrl != null) {
@@ -1098,7 +1145,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 				}
 			} else if ("TestStatistics".equalsIgnoreCase(type) || "SurveyStatistics".equalsIgnoreCase(type)) {
 				//check the security before, the link is perhaps in the wrong hands
-				if(reSecurity.isEntryAdmin() || reSecurity.isCourseCoach() || reSecurity.isGroupCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
+				if(reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT)) {
 					try {
 						Activateable2 assessmentCtrl = null;
 						if("TestStatistics".equalsIgnoreCase(type)) {
@@ -1129,20 +1176,9 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			}
 		}
 
-		if(getRunMainController() != null) {
-			getRunMainController().activate(ureq, entries, state);
-		}
-	}
-
-	@Override
-	protected void doAccess(UserRequest ureq) {
-		if(delayedClose == Delayed.access || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				removeCustomCSS();
-				super.doAccess(ureq);
-			}
-		} else {
-			delayedClose = Delayed.access;
+		RunMainController rmc = getRunMainController();
+		if(rmc != null) {
+			rmc.activate(ureq, entries, state);
 		}
 	}
 
@@ -1168,31 +1204,42 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			}
 		}
 	}
-
+	
 	@Override
-	protected void doEditSettings(UserRequest ureq) {
-		if(delayedClose == Delayed.editSettings || requestForClose(ureq)) {
+	protected Activateable2 doSettings(UserRequest ureq, List<ContextEntry> entries) {
+		if(delayedClose == Delayed.settings || requestForClose(ureq)) {
 			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
 				removeCustomCSS();
-				super.doEditSettings(ureq);
+				
+				WindowControl bwControl = getSubWindowControl("Settings");
+				RepositoryEntry refreshedEntry = loadRepositoryEntry();
+				CourseSettingsController ctrl
+					= new CourseSettingsController(ureq, addToHistory(ureq, bwControl), toolbarPanel, refreshedEntry);
+				listenTo(ctrl);
+				settingsCtrl = pushController(ureq, translate("details.settings"), ctrl);
+				currentToolCtr = settingsCtrl;
+				setActiveTool(settingsLink);
+				settingsCtrl.activate(ureq, entries, null);
+				return settingsCtrl;
 			}
 		} else {
-			delayedClose = Delayed.editSettings;
+			delayedClose = Delayed.settings;
 		}
+		return null;
 	}
 
 	@Override
 	protected Activateable2 doMembers(UserRequest ureq) {
 		if(delayedClose == Delayed.members || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT) || hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT)) {
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT) || hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT)) {
 				removeCustomCSS();
 				if(currentToolCtr instanceof MembersManagementMainController) {
 					((MembersManagementMainController)currentToolCtr).activate(ureq, null, null);
 				} else {
 					WindowControl bwControl = getSubWindowControl("MembersMgmt");
 					MembersManagementMainController ctrl = new MembersManagementMainController(ureq, addToHistory(ureq, bwControl), toolbarPanel,
-							getRepositoryEntry(), getUserCourseEnvironment(), reSecurity.isEntryAdmin(), hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT),
-							hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT));
+							getRepositoryEntry(), getUserCourseEnvironment(), reSecurity.isEntryAdmin(), reSecurity.isPrincipal() || reSecurity.isMasterCoach(),
+							hasCourseRight(CourseRights.RIGHT_GROUPMANAGEMENT), hasCourseRight(CourseRights.RIGHT_MEMBERMANAGEMENT));
 					listenTo(ctrl);
 					membersCtrl = pushController(ureq, translate("command.opensimplegroupmngt"), ctrl);
 					setActiveTool(membersLink);
@@ -1204,22 +1251,11 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		}
 		return membersCtrl;
 	}
-
-	@Override
-	protected void doCatalog(UserRequest ureq) {
-		if(delayedClose == Delayed.catalog || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				super.doCatalog(ureq);
-			}
-		} else {
-			delayedClose = Delayed.catalog;
-		}
-	}
 	
 	private void doConfirmLeave(UserRequest ureq) {
 		String title = translate("sign.out");
 
-		leaveDialogBox = new ConfirmLeaveController(ureq, getWindowControl(), this.getRepositoryEntry());
+		leaveDialogBox = new ConfirmLeaveController(ureq, getWindowControl(), getRepositoryEntry());
 		listenTo(leaveDialogBox);
 		cmc = new CloseableModalController(getWindowControl(), "close", leaveDialogBox.getInitialComponent(), true, title);
 		listenTo(cmc);
@@ -1255,7 +1291,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	private void doLifeCycleChange(UserRequest ureq) {
 		List<Link> breadCrumbs = toolbarPanel.getBreadCrumbs();
 		BreadCrumb lastCrumb = null;
-		if (breadCrumbs.size() > 0) {
+		if (!breadCrumbs.isEmpty()) {
 			lastCrumb = (BreadCrumb) breadCrumbs.get(breadCrumbs.size()-1).getUserObject();
 		}
 		if (lastCrumb == null || lastCrumb.getController() != lifeCycleChangeCtr) {
@@ -1274,71 +1310,22 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 		}
 	}
 	
-	private void doLayout(UserRequest ureq) {
-		if(delayedClose == Delayed.layout || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				removeCustomCSS();
-				ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
-				boolean managedLayout = RepositoryEntryManagedFlag.isManaged(getRepositoryEntry(), RepositoryEntryManagedFlag.layout);
-				CourseConfig courseConfig = course.getCourseEnvironment().getCourseConfig().clone();
-				CourseLayoutGeneratorController ctrl = new CourseLayoutGeneratorController(ureq, getWindowControl(), course, courseConfig,
-				  		course.getCourseEnvironment(), !managedLayout);
-				listenTo(ctrl);
-				courseLayoutCtrl = pushController(ureq, translate("command.layout"), ctrl);
-				setActiveTool(layoutLink);
-				currentToolCtr = courseLayoutCtrl;
-			}
-		} else {
-			delayedClose = Delayed.layout;
-		}
-	}
-	
-	private void doOptions(UserRequest ureq) {
-		if(delayedClose == Delayed.options || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				removeCustomCSS();
-				ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
-				CourseConfig courseConfig = course.getCourseEnvironment().getCourseConfig().clone();
-				CourseOptionsController ctrl = new CourseOptionsController(ureq, getWindowControl(), getRepositoryEntry(), courseConfig, true);
-				optionsToolCtr = pushController(ureq, translate("command.options"), ctrl);
-				setActiveTool(optionsLink);
-				currentToolCtr = optionsToolCtr;
-			}
-		} else {
-			delayedClose = Delayed.options;
-		}
-	}
-	
 	private void doAssessmentMode(UserRequest ureq) {
 		if(delayedClose == Delayed.assessmentMode || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach()
+					|| hasCourseRight(CourseRights.RIGHT_COURSEEDITOR) || hasCourseRight(CourseRights.RIGHT_ASSESSMENT_MODE)) {
 				removeCustomCSS();
+				
+				boolean canManage = reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR) || hasCourseRight(CourseRights.RIGHT_ASSESSMENT_MODE);
+				AssessmentModeSecurityCallback secCallback = AssessmentModeSecurityCallbackFactory.getSecurityCallback(canManage);
 				AssessmentModeListController ctrl = new AssessmentModeListController(ureq, getWindowControl(),
-						toolbarPanel, getRepositoryEntry());
+						toolbarPanel, getRepositoryEntry(), secCallback);
 				assessmentModeCtrl = pushController(ureq, translate("command.assessment.mode"), ctrl);
 				setActiveTool(assessmentModeLink);
 				currentToolCtr = assessmentModeCtrl;
 			}
 		} else {
 			delayedClose = Delayed.assessmentMode;
-		}
-	}
-	
-	private void doCertificatesOptions(UserRequest ureq) {
-		if(delayedClose == Delayed.certificates || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
-				removeCustomCSS();
-				ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
-				CourseConfig courseConfig = course.getCourseEnvironment().getCourseConfig().clone();
-				WindowControl bwControl = getSubWindowControl("CertificationSettings");
-				CertificatesOptionsController ctrl = new CertificatesOptionsController(ureq, addToHistory(ureq, bwControl),
-						getRepositoryEntry(), courseConfig, true);
-				certificatesOptionsCtrl = pushController(ureq, translate("command.options"), ctrl);
-				setActiveTool(certificatesOptionsLink);
-				currentToolCtr = certificatesOptionsCtrl;
-			}
-		} else {
-			delayedClose = Delayed.certificates;
 		}
 	}
 	
@@ -1354,6 +1341,49 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			}
 		} else {
 			delayedClose = Delayed.reminders;
+		}
+	}
+	
+	private LectureRepositoryAdminController doLecturesAdmin(UserRequest ureq) {
+		if(delayedClose == Delayed.lecturesAdmin || requestForClose(ureq)) {
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR)) {
+				removeCustomCSS();
+
+				OLATResourceable ores = OresHelper.createOLATResourceableType("LecturesAdmin");
+				WindowControl swControl = addToHistory(ureq, ores, null);
+				LecturesSecurityCallback secCallback = LecturesSecurityCallbackFactory
+						.getSecurityCallback(reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_COURSEEDITOR));
+				LectureRepositoryAdminController ctrl = new LectureRepositoryAdminController(ureq, swControl, toolbarPanel, getRepositoryEntry(), secCallback);
+				listenTo(ctrl);
+				lecturesAdminCtrl = pushController(ureq, translate("command.options.lectures.admin"), ctrl);
+				setActiveTool(lecturesAdminLink);
+				currentToolCtr = lecturesAdminCtrl;
+				return lecturesAdminCtrl;
+			} else {
+				return null;
+			}
+		} else {
+			delayedClose = Delayed.lecturesAdmin;
+			return null;
+		}
+	}
+	
+	private TeacherOverviewController doLectures(UserRequest ureq) {
+		if(delayedClose == Delayed.lectures || requestForClose(ureq)) {
+			removeCustomCSS();
+			
+			OLATResourceable ores = OresHelper.createOLATResourceableType("lectures");
+			WindowControl swControl = addToHistory(ureq, ores, null);
+			TeacherOverviewController ctrl = new TeacherOverviewController(ureq, swControl, toolbarPanel, getRepositoryEntry(),
+					reSecurity.isEntryAdmin(), lectureModule.isShowLectureBlocksAllTeachersDefault());
+			lecturesCtrl = pushController(ureq, translate("command.lectures"), ctrl);
+
+			setActiveTool(lecturesLink);
+			currentToolCtr = lecturesCtrl;
+			return lecturesCtrl;
+		} else {
+			delayedClose = Delayed.lectures;
+			return null;
 		}
 	}
 	
@@ -1432,7 +1462,8 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	
 	private void doCourseStatistics(UserRequest ureq) {
 		if(delayedClose == Delayed.courseStatistics || requestForClose(ureq)) {
-			if (reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_STATISTICS)) {
+			if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach()
+					|| hasCourseRight(CourseRights.RIGHT_STATISTICS)) {
 				removeCustomCSS();
 				ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
 				StatisticMainController ctrl = new StatisticMainController(ureq, getWindowControl(), course);
@@ -1449,7 +1480,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	private Activateable2 doAssessmentTestStatistics(UserRequest ureq) {
 		Activateable2 controller = null;
 		if(delayedClose == Delayed.assessmentTestStatistics || requestForClose(ureq)) {
-			controller = doAssessmentStatistics(ureq, "command.openteststatistic", "TestStatistics", testStatisticLink, QTIType.test, QTIType.onyx);
+			controller = doAssessmentStatistics(ureq, "command.openteststatistic", "TestStatistics", testStatisticLink, StatisticType.TEST);
 		} else {
 			delayedClose = Delayed.assessmentTestStatistics;
 		}
@@ -1459,7 +1490,8 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	private Activateable2 doAssessmentSurveyStatistics(UserRequest ureq) {
 		Activateable2 controller = null;
 		if(delayedClose == Delayed.assessmentSurveyStatistics || requestForClose(ureq)) {
-			controller = doAssessmentStatistics(ureq, "command.opensurveystatistic", "SurveyStatistics", surveyStatisticLink, QTIType.survey);
+			controller = doAssessmentStatistics(ureq, "command.opensurveystatistic", "SurveyStatistics",
+					surveyStatisticLink, StatisticType.SURVEY);
 		} else {
 			delayedClose = Delayed.assessmentSurveyStatistics;
 		}
@@ -1475,14 +1507,14 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	 * @param types
 	 * @return
 	 */
-	private Activateable2 doAssessmentStatistics(UserRequest ureq, String i18nCrumbKey, String typeName, Link tool, QTIType... types) {
+	private Activateable2 doAssessmentStatistics(UserRequest ureq, String i18nCrumbKey, String typeName, Link tool, StatisticType type) {
 		OLATResourceable ores = OresHelper.createOLATResourceableType(typeName);
 		ThreadLocalUserActivityLogger.addLoggingResourceInfo(LoggingResourceable.wrapBusinessPath(ores));
 		WindowControl swControl = addToHistory(ureq, ores, null);
-		if (reSecurity.isEntryAdmin() || reSecurity.isCourseCoach() || reSecurity.isGroupCoach() || hasCourseRight(CourseRights.RIGHT_STATISTICS)) {
+		if (reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || reSecurity.isCoach() || hasCourseRight(CourseRights.RIGHT_STATISTICS)) {
 			removeCustomCSS();
 			UserCourseEnvironmentImpl uce = getUserCourseEnvironment();
-			StatisticCourseNodesController ctrl = new StatisticCourseNodesController(ureq, swControl, toolbarPanel,  reSecurity, uce, types);
+			StatisticCourseNodesController ctrl = new StatisticCourseNodesController(ureq, swControl, toolbarPanel,  reSecurity, uce, type);
 			listenTo(ctrl);
 			statsToolCtr = pushController(ureq, translate(i18nCrumbKey), ctrl);
 			currentToolCtr = statsToolCtr;
@@ -1498,22 +1530,22 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			ThreadLocalUserActivityLogger.addLoggingResourceInfo(LoggingResourceable.wrapBusinessPath(ores));
 			WindowControl swControl = addToHistory(ureq, ores, null);
 			
-			boolean admin = reSecurity.isEntryAdmin() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT);
+			boolean admin = reSecurity.isEntryAdmin() || reSecurity.isPrincipal() || reSecurity.isMasterCoach() || hasCourseRight(CourseRights.RIGHT_ASSESSMENT);
 			boolean nonMembers = reSecurity.isEntryAdmin();
-			boolean repositoryEntryMembers = reSecurity.isCourseCoach();
-			boolean businessGoupMembers = reSecurity.isGroupCoach();
 			List<BusinessGroup> coachedGroups = null;
-			if(businessGoupMembers) {
-				coachedGroups = getUserCourseEnvironment().getCoachedGroups();
+			UserCourseEnvironment userCourseEnv = getUserCourseEnvironment();
+			if(reSecurity.isGroupCoach()) {
+				coachedGroups = userCourseEnv.getCoachedGroups();
 			}
 			AssessmentToolSecurityCallback secCallBack
-				= new AssessmentToolSecurityCallback(admin, nonMembers, repositoryEntryMembers, businessGoupMembers, coachedGroups);
+				= new AssessmentToolSecurityCallback(admin, nonMembers, reSecurity.isCourseCoach(), reSecurity.isGroupCoach(), reSecurity.isCurriculumCoach(), coachedGroups);
 
 			removeCustomCSS();
-			AssessmentToolController ctrl = new AssessmentToolController(ureq, swControl, toolbarPanel, getRepositoryEntry(), getUserCourseEnvironment(), secCallBack);
+			AssessmentToolController ctrl = new AssessmentToolController(ureq, swControl, toolbarPanel, getRepositoryEntry(), userCourseEnv, secCallBack);
 			ctrl.activate(ureq, null, null);
 			listenTo(ctrl);
 			assessmentToolCtr = pushController(ureq, translate("command.openassessment"), ctrl);
+			assessmentToolCtr.assessmentModeMessage();
 			currentToolCtr = assessmentToolCtr;
 			setActiveTool(assessmentLink);
 			ctrl.initToolbar();
@@ -1578,7 +1610,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	}
 
 	private void launchChat(UserRequest ureq) {
-		boolean vip = reSecurity.isCourseCoach() || reSecurity.isGroupCoach() || reSecurity.isEntryAdmin();
+		boolean vip = reSecurity.isCoach() || reSecurity.isEntryAdmin();
 		ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
 		OpenInstantMessageEvent event = new OpenInstantMessageEvent(ureq, course, course.getCourseTitle(), vip);
 		ureq.getUserSession().getSingleUserEventCenter().fireEventToListenersOf(event, InstantMessagingService.TOWER_EVENT_ORES);
@@ -1601,19 +1633,16 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	}
 	
 	private void launchCalendar(UserRequest ureq) {
-		ControllerCreator ctrlCreator = new ControllerCreator() {
-			@Override
-			public Controller createController(UserRequest lureq, WindowControl lwControl) {
-				ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
-				ContextEntry ce = BusinessControlFactory.getInstance().createContextEntry(getRepositoryEntry());
-				WindowControl llwControl = BusinessControlFactory.getInstance().createBusinessWindowControl(ce, lwControl);
-				CourseCalendarController calendarController = new CourseCalendarController(lureq, llwControl, getUserCourseEnvironment());					
-				// use a one-column main layout
-				LayoutMain3ColsController layoutCtr = new LayoutMain3ColsController(lureq, llwControl, calendarController);
-				layoutCtr.setCustomCSS(CourseFactory.getCustomCourseCss(lureq.getUserSession(), course.getCourseEnvironment()));
-				layoutCtr.addDisposableChildController(calendarController); // dispose calendar on layout dispose
-				return layoutCtr;					
-			}					
+		ControllerCreator ctrlCreator = (lureq, lwControl) -> {
+			ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
+			ContextEntry ce = BusinessControlFactory.getInstance().createContextEntry(getRepositoryEntry());
+			WindowControl llwControl = BusinessControlFactory.getInstance().createBusinessWindowControl(ce, lwControl);
+			CourseCalendarController calendarController = new CourseCalendarController(lureq, llwControl, getUserCourseEnvironment());					
+			// use a one-column main layout
+			LayoutMain3ColsController layoutCtr = new LayoutMain3ColsController(lureq, llwControl, calendarController);
+			layoutCtr.setCustomCSS(CourseFactory.getCustomCourseCss(lureq.getUserSession(), course.getCourseEnvironment()));
+			layoutCtr.addDisposableChildController(calendarController); // dispose calendar on layout dispose
+			return layoutCtr;
 		};
 		//wrap the content controller into a full header layout
 		ControllerCreator layoutCtrlr = BaseFullWebappPopupLayoutFactory.createAuthMinimalPopupLayout(ureq, ctrlCreator);
@@ -1638,7 +1667,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			// display error and do logging
 			getWindowControl().setError(translate("error.invalid.group"));
 			logAudit("User tried to launch a group but user is not owner or participant "
-					+ "of group or group doesn't exist. Hacker attack or group has been changed or deleted. group key :: " + groupKey, null);
+					+ "of group or group doesn't exist. Hacker attack or group has been changed or deleted. group key :: " + groupKey);
 			// refresh toolbox that contained wrong group
 			reloadGroupMemberships(reSecurity);
 		}
@@ -1646,16 +1675,13 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	
 	private void launchPersonalNotes(UserRequest ureq) {
 		// will not be disposed on course run dispose, pop up as new browser window
-		ControllerCreator ctrlCreator = new ControllerCreator() {
-			@Override
-			public Controller createController(UserRequest lureq, WindowControl lwControl) {
-				ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
-				Controller notesCtr = new NoteController(lureq, course, course.getCourseTitle(), lwControl);
-				LayoutMain3ColsController layoutCtr = new LayoutMain3ColsController(lureq, lwControl, notesCtr);
-				layoutCtr.setCustomCSS(CourseFactory.getCustomCourseCss(lureq.getUserSession(), course.getCourseEnvironment()));
-				layoutCtr.addDisposableChildController(notesCtr); // dispose glossary on layout dispose
-				return layoutCtr;
-			}					
+		ControllerCreator ctrlCreator = (lureq, lwControl) -> {
+			ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
+			Controller notesCtr = new NoteController(lureq, course, course.getCourseTitle(), lwControl);
+			LayoutMain3ColsController layoutCtr = new LayoutMain3ColsController(lureq, lwControl, notesCtr);
+			layoutCtr.setCustomCSS(CourseFactory.getCustomCourseCss(lureq.getUserSession(), course.getCourseEnvironment()));
+			layoutCtr.addDisposableChildController(notesCtr); // dispose glossary on layout dispose
+			return layoutCtr;
 		};
 		//wrap the content controller into a full header layout
 		ControllerCreator popupLayoutCtr = BaseFullWebappPopupLayoutFactory.createAuthMinimalPopupLayout(ureq, ctrlCreator);
@@ -1677,39 +1703,33 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			List<ContextEntry> entries = BusinessControlFactory.getInstance().createCEListFromResourceType(allowGlossaryEditing ? "true" : "false");
 			dts.activate(ureq, dt, entries);
 		} else {
-			ControllerCreator ctrlCreator = new ControllerCreator() {
-				public Controller createController(UserRequest lureq, WindowControl lwControl) {
-					GlossaryMainController glossaryController = CourseGlossaryFactory.createCourseGlossaryMainRunController(lwControl, lureq, cc, allowGlossaryEditing);
-					listenTo(glossaryController);
-					if (glossaryController == null) {
-						// happens in the unlikely event of a user who is in a course and
-						// now
-						// tries to access the glossary
-						String text = translate("error.noglossary");
-						return MessageUIFactory.createInfoMessage(lureq, lwControl, null, text);
-					} else {
-						// use a one-column main layout
-						LayoutMain3ColsController layoutCtr = new LayoutMain3ColsController(lureq, lwControl, glossaryController);
-						// dispose glossary on layout dispose
-						layoutCtr.addDisposableChildController(glossaryController);
-						return layoutCtr;
-					}
+			ControllerCreator ctrlCreator = (lureq, lwControl) -> {
+				GlossaryMainController glossaryController = CourseGlossaryFactory.createCourseGlossaryMainRunController(lwControl, lureq, cc, allowGlossaryEditing);
+				listenTo(glossaryController);
+				if (glossaryController == null) {
+					// happens in the unlikely event of a user who is in a course and
+					// now
+					// tries to access the glossary
+					String text = translate("error.noglossary");
+					return MessageUIFactory.createInfoMessage(lureq, lwControl, null, text);
+				} else {
+					// use a one-column main layout
+					LayoutMain3ColsController layoutCtr = new LayoutMain3ColsController(lureq, lwControl, glossaryController);
+					// dispose glossary on layout dispose
+					layoutCtr.addDisposableChildController(glossaryController);
+					return layoutCtr;
 				}
 			};
 
 			ControllerCreator layoutCtrlr = BaseFullWebappPopupLayoutFactory.createAuthMinimalPopupLayout(ureq, ctrlCreator);
 			// open in new browser window
 			openInNewBrowserWindow(ureq, layoutCtrlr);
-			return;// immediate return after opening new browser window!
 		}
 	}
 	
-	private void processClosedUnclosedEvent(UserRequest ureq) {
-		loadRepositoryEntry();
-		reSecurity = repositoryManager.isAllowed(getIdentity(), roles, getRepositoryEntry());
-		loadRights(reSecurity);
-		toolbarPanel.popUpToRootController(ureq);
-		initToolbar();
+	@Override
+	protected void processClosedUnclosedEvent(UserRequest ureq) {
+		super.processClosedUnclosedEvent(ureq);
 		
 		RunMainController runCtrl = getRunMainController();
 		if(runCtrl != null && runCtrl.getCurrentCourseNode() != null) {
@@ -1764,7 +1784,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 				if(glossary != null) {
 					ICourse course = CourseFactory.loadCourse(getRepositoryEntry());
 					CourseConfig cc = course.getCourseEnvironment().getCourseConfig();
-					glossary.setVisible(cc.hasGlossary());
+					glossary.setVisible(cc.hasGlossary() && cc.isGlossaryEnabled());
 					toolbarPanel.setDirty(true);
 				}
 				break;
@@ -1823,6 +1843,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			reSecurity = repositoryManager.isAllowed(getIdentity(), roles, getRepositoryEntry());
 			if(reSecurity.canLaunch()) {
 				loadRights(reSecurity);
+				reloadStatus();
 			} else {
 				doDisposeAfterEvent();
 				loadRights(reSecurity);
@@ -1838,7 +1859,7 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 			return;
 		}
 			
-		currentUserCount = coordinatorManager.getCoordinator().getEventBus().getListeningIdentityCntFor(getOlatResourceable());
+		int currentUserCount = coordinatorManager.getCoordinator().getEventBus().getListeningIdentityCntFor(getOlatResourceable());
 		if(currentUserCount == 0) {
 			currentUserCount = 1;
 		}
@@ -1854,25 +1875,22 @@ public class CourseRuntimeController extends RepositoryEntryRuntimeController im
 	}
 	
 	private enum Delayed {
-		access,
 		archive,
 		assessmentMode,
 		assessmentSurveyStatistics,
 		assessmentTestStatistics,
 		assessmentTool,
-		certificates,
 		reminders,
+		lecturesAdmin,
+		lectures,
 		courseAreas,
 		courseFolder,
 		courseStatistics,
 		databases,
 		details,
-		editSettings,
+		settings,
 		efficiencyStatements,
-		catalog,
-		layout,
 		members,
-		options,
 		orders,
 		close,
 		pop
