@@ -25,6 +25,7 @@
 
 package org.olat.course.run.preview;
 
+import java.io.File;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
@@ -34,7 +35,6 @@ import java.util.Map;
 import org.olat.core.id.Identity;
 import org.olat.core.id.OLATResourceable;
 import org.olat.core.logging.AssertException;
-import org.olat.core.manager.BasicManager;
 import org.olat.core.util.event.GenericEventListener;
 import org.olat.course.assessment.AssessmentManager;
 import org.olat.course.nodes.AssessableCourseNode;
@@ -43,22 +43,21 @@ import org.olat.course.run.scoring.ScoreEvaluation;
 import org.olat.course.run.userview.UserCourseEnvironment;
 import org.olat.group.BusinessGroup;
 import org.olat.modules.assessment.AssessmentEntry;
+import org.olat.modules.assessment.Role;
 import org.olat.modules.assessment.model.AssessmentEntryStatus;
+import org.olat.modules.assessment.model.AssessmentRunStatus;
 
 /**
  * Initial Date:  08.02.2005
  *
  * @author Mike Stock
  */
-final class PreviewAssessmentManager extends BasicManager implements AssessmentManager {
-	private Map<String,Float> nodeScores = new HashMap<String,Float>();
-	private Map<String,Boolean> nodePassed = new HashMap<String,Boolean>();
-	private Map<String,Integer> nodeAttempts = new HashMap<String,Integer>();
-	private Map<String,Long> nodeAssessmentID = new HashMap<String,Long>();
+final class PreviewAssessmentManager implements AssessmentManager {
+	private Map<String,Float> nodeScores = new HashMap<>();
+	private Map<String,Boolean> nodePassed = new HashMap<>();
+	private Map<String,Integer> nodeAttempts = new HashMap<>();
+	private Map<String,Long> nodeAssessmentID = new HashMap<>();
 
-	/**
-	 * @see org.olat.course.assessment.AssessmentManager#saveNodeScore(org.olat.course.nodes.CourseNode, org.olat.core.id.Identity, org.olat.core.id.Identity, java.lang.Float)
-	 */
 	private void saveNodeScore(CourseNode courseNode, Float score) {
 		nodeScores.put(courseNode.getIdent(), score);
 	}
@@ -98,20 +97,30 @@ final class PreviewAssessmentManager extends BasicManager implements AssessmentM
 		return assessmentEntry;
 	}
 
-	/**
-	 * @see org.olat.course.assessment.AssessmentManager#saveNodeAttempts(org.olat.course.nodes.CourseNode, org.olat.core.id.Identity, org.olat.core.id.Identity, java.lang.Integer)
-	 */
 	@Override
-	public void saveNodeAttempts(CourseNode courseNode, Identity identity, Identity assessedIdentity, Integer attempts) {
+	public void saveNodeAttempts(CourseNode courseNode, Identity identity, Identity assessedIdentity, Integer attempts, Role by) {
 		nodeAttempts.put(courseNode.getIdent(), attempts);
 	}
 
-	/**
-	 * @see org.olat.course.assessment.AssessmentManager#saveNodeComment(org.olat.course.nodes.CourseNode, org.olat.core.id.Identity, org.olat.core.id.Identity, java.lang.String)
-	 */
 	@Override
 	public void saveNodeComment(CourseNode courseNode, Identity identity, Identity assessedIdentity, String comment) {
 		throw new AssertException("Not implemented for preview.");
+	}
+
+	@Override
+	public void addIndividualAssessmentDocument(CourseNode courseNode, Identity identity, Identity assessedIdentity,
+			File document, String filename) {
+		// do nothing
+	}
+
+	@Override
+	public void removeIndividualAssessmentDocument(CourseNode courseNode, Identity identity, Identity assessedIdentity, File document) {
+		// do nothing
+	}
+
+	@Override
+	public void deleteIndividualAssessmentDocuments(CourseNode courseNode) {
+		//
 	}
 
 	/**
@@ -133,12 +142,12 @@ final class PreviewAssessmentManager extends BasicManager implements AssessmentM
 	 * @see org.olat.course.assessment.AssessmentManager#incrementNodeAttempts(org.olat.course.nodes.CourseNode, org.olat.core.id.Identity)
 	 */
 	@Override
-	public void incrementNodeAttempts(CourseNode courseNode, Identity identity, UserCourseEnvironment userCourseEnvironment) {
+	public void incrementNodeAttempts(CourseNode courseNode, Identity identity, UserCourseEnvironment userCourseEnvironment, Role by) {
 		Integer attempts = nodeAttempts.get(courseNode.getIdent());
-		if (attempts == null) attempts = new Integer(0);
+		if (attempts == null) attempts = Integer.valueOf(0);
 		int iAttempts = attempts.intValue();
 		iAttempts++;
-		nodeAttempts.put(courseNode.getIdent(), new Integer(iAttempts));
+		nodeAttempts.put(courseNode.getIdent(), Integer.valueOf(iAttempts));
 	}
 	
 	/**
@@ -147,7 +156,18 @@ final class PreviewAssessmentManager extends BasicManager implements AssessmentM
 	 */
 	@Override
 	public void incrementNodeAttemptsInBackground(CourseNode courseNode, Identity identity, UserCourseEnvironment userCourseEnvironment) {
-		incrementNodeAttempts(courseNode, identity, userCourseEnvironment);
+		incrementNodeAttempts(courseNode, identity, userCourseEnvironment, Role.auto);
+	}
+
+	@Override
+	public void updateCurrentCompletion(CourseNode courseNode, Identity assessedIdentity, UserCourseEnvironment userCourseEnvironment,
+			Double currentCompletion, AssessmentRunStatus runStatus, Role by) {
+		//
+	}
+
+	@Override
+	public void updateLastModifications(CourseNode courseNode, Identity assessedIdentity, UserCourseEnvironment userCourseEnvironment, Role by) {
+		//
 	}
 
 	/**
@@ -164,6 +184,11 @@ final class PreviewAssessmentManager extends BasicManager implements AssessmentM
 	@Override
 	public String getNodeComment(CourseNode courseNode, Identity identity) {
 		return "This is a preview"; //default comment for preview
+	}
+	
+	@Override
+	public List<File> getIndividualAssessmentDocuments(CourseNode courseNode, Identity identity) {
+		return Collections.emptyList();
 	}
 
 	/**
@@ -193,7 +218,17 @@ final class PreviewAssessmentManager extends BasicManager implements AssessmentM
 	@Override
 	public Integer getNodeAttempts(CourseNode courseNode, Identity identity) {
 		Integer attempts = nodeAttempts.get(courseNode.getIdent());
-		return (attempts == null ? new Integer(0) : attempts);
+		return (attempts == null ? Integer.valueOf(0) : attempts);
+	}
+
+	@Override
+	public Double getNodeCompletion(CourseNode courseNode, Identity identity) {
+		return null;
+	}
+
+	@Override
+	public Double getNodeCurrentRunCompletion(CourseNode courseNode, Identity identity) {
+		return null;
 	}
 
 	/**
@@ -241,13 +276,13 @@ final class PreviewAssessmentManager extends BasicManager implements AssessmentM
 	 */
 	@Override
 	public void saveScoreEvaluation(AssessableCourseNode courseNode, Identity identity, Identity assessedIdentity, ScoreEvaluation scoreEvaluation, 
-			UserCourseEnvironment userCourseEnvironment, boolean incrementUserAttempts) {
+			UserCourseEnvironment userCourseEnvironment, boolean incrementUserAttempts, Role by) {
 		
 		saveNodeScore(courseNode, scoreEvaluation.getScore());
 		saveNodePassed(courseNode, scoreEvaluation.getPassed());
 		saveAssessmentID(courseNode, scoreEvaluation.getAssessmentID());
 		if(incrementUserAttempts) {
-			incrementNodeAttempts(courseNode, identity, userCourseEnvironment);
+			incrementNodeAttempts(courseNode, identity, userCourseEnvironment, by);
 		}
 	}
 
