@@ -20,6 +20,9 @@
 package org.olat.modules.portfolio.ui;
 
 import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -29,7 +32,9 @@ import java.util.Set;
 import org.olat.core.gui.UserRequest;
 import org.olat.core.gui.components.form.flexible.FormItem;
 import org.olat.core.gui.components.form.flexible.FormItemContainer;
+import org.olat.core.gui.components.form.flexible.elements.DownloadLink;
 import org.olat.core.gui.components.form.flexible.elements.FileElement;
+import org.olat.core.gui.components.form.flexible.elements.FormLink;
 import org.olat.core.gui.components.form.flexible.elements.RichTextElement;
 import org.olat.core.gui.components.form.flexible.elements.SingleSelection;
 import org.olat.core.gui.components.form.flexible.elements.TextBoxListElement;
@@ -38,18 +43,31 @@ import org.olat.core.gui.components.form.flexible.impl.FormBasicController;
 import org.olat.core.gui.components.form.flexible.impl.FormEvent;
 import org.olat.core.gui.components.form.flexible.impl.FormLayoutContainer;
 import org.olat.core.gui.components.form.flexible.impl.elements.FileElementEvent;
+import org.olat.core.gui.components.link.Link;
 import org.olat.core.gui.control.Controller;
 import org.olat.core.gui.control.Event;
 import org.olat.core.gui.control.WindowControl;
+import org.olat.core.util.CodeHelper;
+import org.olat.core.util.FileUtils;
 import org.olat.core.util.StringHelper;
+import org.olat.core.util.WebappHelper;
+import org.olat.core.util.io.SystemFilenameFilter;
+import org.olat.modules.portfolio.Assignment;
+import org.olat.modules.portfolio.AssignmentType;
 import org.olat.modules.portfolio.Binder;
+import org.olat.modules.portfolio.BinderSecurityCallback;
 import org.olat.modules.portfolio.Category;
+import org.olat.modules.portfolio.Media;
+import org.olat.modules.portfolio.MediaHandler;
 import org.olat.modules.portfolio.Page;
 import org.olat.modules.portfolio.PageImageAlign;
 import org.olat.modules.portfolio.PortfolioService;
 import org.olat.modules.portfolio.Section;
 import org.olat.modules.portfolio.SectionRef;
+import org.olat.modules.portfolio.manager.PortfolioFileStorage;
+import org.olat.modules.portfolio.model.MediaPart;
 import org.olat.modules.portfolio.model.SectionKeyRef;
+import org.olat.modules.portfolio.ui.media.UploadMedia;
 import org.springframework.beans.factory.annotation.Autowired;
 
 /**
@@ -72,8 +90,13 @@ public class PageMetadataEditController extends FormBasicController {
 	
 	private TextElement titleEl;
 	private RichTextElement summaryEl;
-	private SingleSelection bindersEl, sectionsEl;
+	private SingleSelection bindersEl;
+	private SingleSelection sectionsEl;
+	private SingleSelection assignmentsTemplatesEl;
 	private TextBoxListElement categoriesEl;
+	private DownloadLink downloadAssignmentDocEl;
+	private FileElement assignmentDocUploadEl;
+	private FormLayoutContainer assignmentDocsContainer;
 	
 	private FileElement imageUpload;
 	private SingleSelection imageAlignEl;
@@ -82,22 +105,28 @@ public class PageMetadataEditController extends FormBasicController {
 	private Page page;
 	private Binder currentBinder;
 	private Section currentSection;
-	
+	private final BinderSecurityCallback secCallback;
+
+	private int counter;
+	private File tempFolder;
 	private final boolean chooseBinder;
 	private final boolean chooseSection;
 	private final boolean editTitleAndSummary;
 
+	private List<FileInfos> documents = new ArrayList<>();
 	private Map<String,String> categories = new HashMap<>();
 	private Map<String,Category> categoriesMap = new HashMap<>();
-	
+	private Map<String,Assignment> assignmentTemplatesMap = new HashMap<>();
+
 	@Autowired
 	private PortfolioService portfolioService;
+	@Autowired
+	private PortfolioFileStorage portfolioFileStorage;
 	
-	public PageMetadataEditController(UserRequest ureq, WindowControl wControl,
-			Binder currentBinder, boolean chooseBinder,
-			Section currentSection, boolean chooseSection) {
+	public PageMetadataEditController(UserRequest ureq, WindowControl wControl, BinderSecurityCallback secCallback,
+			Binder currentBinder, boolean chooseBinder, Section currentSection, boolean chooseSection) {
 		super(ureq, wControl);
-		
+		this.secCallback = secCallback;
 		this.currentBinder = currentBinder;
 		this.currentSection = currentSection;
 		
@@ -105,14 +134,44 @@ public class PageMetadataEditController extends FormBasicController {
 		this.chooseSection = chooseSection;
 		editTitleAndSummary = true;
 		initForm(ureq);
+		
+		if(assignmentsTemplatesEl != null && assignmentsTemplatesEl.getKeys().length > 0) {
+			Assignment assignmentTemplate = null;
+			if(assignmentsTemplatesEl.isOneSelected()) {
+				assignmentTemplate = assignmentTemplatesMap.get(assignmentsTemplatesEl.getSelectedKey());
+			} else if(StringHelper.containsNonWhitespace(assignmentsTemplatesEl.getKeys()[0])) {
+				assignmentsTemplatesEl.select(assignmentsTemplatesEl.getKeys()[0], true);
+				assignmentTemplate = assignmentTemplatesMap.get(assignmentsTemplatesEl.getSelectedKey());
+			} else if(assignmentsTemplatesEl.getKeys().length > 1) {
+				assignmentsTemplatesEl.select(assignmentsTemplatesEl.getKeys()[1], true);
+				assignmentTemplate = assignmentTemplatesMap.get(assignmentsTemplatesEl.getSelectedKey());
+			}
+			updateForAssignmentTemplate(assignmentTemplate);
+		}
 	}
 	
-	public PageMetadataEditController(UserRequest ureq, WindowControl wControl,
-			Binder currentBinder, boolean chooseBinder,
-			Section currentSection, boolean chooseSection,
+	public PageMetadataEditController(UserRequest ureq, WindowControl wControl, BinderSecurityCallback secCallback,
+			Binder currentBinder, boolean chooseBinder, Assignment assignmentTemplate, boolean chooseSection) {
+		super(ureq, wControl);
+		this.secCallback = secCallback;
+		this.currentBinder = currentBinder;
+		currentSection = null;
+		
+		this.chooseBinder = chooseBinder;
+		this.chooseSection = chooseSection;
+		editTitleAndSummary = true;
+		initForm(ureq);
+		
+		assignmentsTemplatesEl.select(assignmentTemplate.getKey().toString(), true);
+		updateForAssignmentTemplate(assignmentTemplate);
+		assignmentsTemplatesEl.setEnabled(false);
+	}
+	
+	public PageMetadataEditController(UserRequest ureq, WindowControl wControl, BinderSecurityCallback secCallback,
+			Binder currentBinder, boolean chooseBinder, Section currentSection, boolean chooseSection,
 			Page page, boolean editTitleAndSummary) {
 		super(ureq, wControl);
-
+		this.secCallback = secCallback;
 		this.page = page;
 		this.editTitleAndSummary = editTitleAndSummary;
 		
@@ -139,7 +198,9 @@ public class PageMetadataEditController extends FormBasicController {
 
 	@Override
 	protected void doDispose() {
-		//
+		if(tempFolder != null) {
+			FileUtils.deleteDirsAndFiles(tempFolder, true, true);
+		}
 	}
 	
 	@Override
@@ -195,8 +256,29 @@ public class PageMetadataEditController extends FormBasicController {
 		sectionsEl.setElementCssClass("o_sel_pf_edit_entry_section");
 		sectionsEl.setVisible(false);
 		
+		assignmentsTemplatesEl = uifactory.addDropdownSingleselect("assignments", "assignments.templates", formLayout, new String[] { "" }, new String[] { "" }, null);
+		assignmentsTemplatesEl.setElementCssClass("o_sel_pf_edit_entry_assignment_template");
+		assignmentsTemplatesEl.addActionListener(FormEvent.ONCHANGE);
+		assignmentsTemplatesEl.setVisible(false);
+		
+		downloadAssignmentDocEl = uifactory.addDownloadLink("assignments.doc", "", "assignment.template.doc", null, formLayout);
+		downloadAssignmentDocEl.setVisible(false);
+		
+		assignmentDocUploadEl = uifactory.addFileElement(getWindowControl(), "assignment.template.documents", formLayout);
+		assignmentDocUploadEl.addActionListener(FormEvent.ONCHANGE);
+		assignmentDocUploadEl.setVisible(false);
+
+		String documentsPage = velocity_root + "/assignment_documents.html";
+		assignmentDocsContainer = FormLayoutContainer.createCustomFormLayout("documentsLayout", getTranslator(), documentsPage);
+		formLayout.add(assignmentDocsContainer);
+		assignmentDocsContainer.setRootForm(mainForm);
+		assignmentDocsContainer.setLabel(null, null);
+		assignmentDocsContainer.setVisible(false);
+		assignmentDocsContainer.contextPut("documents", documents);
+		
 		initBinderSelection();
 		updateSections();
+		updateAssignmentTemplates();
 		
 		FormLayoutContainer buttonsCont = FormLayoutContainer.createButtonLayout("buttons", getTranslator());
 		buttonsCont.setRootForm(mainForm);
@@ -295,10 +377,71 @@ public class PageMetadataEditController extends FormBasicController {
 			sectionsEl.setVisible(true);
 		}
 	}
+	
+	private void updateAssignmentTemplates() {
+		if(currentBinder == null || (page != null && page.getKey() != null)) return;
+		
+		List<Assignment> assignments = portfolioService.getBindersAssignmentsTemplates(currentBinder);
+		if(assignments.isEmpty()) return;
+		
+		List<String> assignmentKeys = new ArrayList<>(assignments.size() + 2);
+		List<String> assignmentNames = new ArrayList<>(assignments.size() + 2);
+
+		if(secCallback.canNewPageWithoutAssignment()) {
+			assignmentKeys.add("");
+			assignmentNames.add(translate("assignments.templates.without"));
+		}
+		for(int i=assignments.size(); i-->0; ) {
+			Assignment assignment = assignments.get(i);
+			String assignmentKey = assignment.getKey().toString();
+			assignmentKeys.add(assignmentKey);
+			assignmentNames.add(assignment.getTitle());
+			assignmentTemplatesMap.put(assignmentKey, assignment);
+		}
+		
+		assignmentsTemplatesEl.setKeysAndValues(assignmentKeys.toArray(new String[assignmentKeys.size()]), assignmentNames.toArray(new String[assignmentNames.size()]), null);
+		assignmentsTemplatesEl.setMandatory(true);
+		assignmentsTemplatesEl.setVisible(true);
+	}
+	
+	private void updateForAssignmentTemplate(Assignment assignment) {
+		if(assignment == null || assignment.getAssignmentType() != AssignmentType.document) {
+			downloadAssignmentDocEl.setVisible(false);
+			assignmentDocUploadEl.setVisible(false);
+			assignmentDocsContainer.setVisible(false);
+		} else {
+			File document = portfolioFileStorage.getAssignmentFirstFile(assignment);
+			downloadAssignmentDocEl.setVisible(document != null);
+			assignmentDocUploadEl.setVisible(true);
+			if(document != null) {
+				downloadAssignmentDocEl.setDownloadItem(document);
+				downloadAssignmentDocEl.setLinkText(document.getName());
+			}
+			updateDocumentsLayout();
+		}
+	}
+	
+	// adds or updates the list of already existing attachments with a delete
+	// button for each
+	private void updateDocumentsLayout() {
+		documents.clear();
+		List<File> tempDocuments = getTempFolderFiles();
+		for(File document:tempDocuments) {
+			String docId = "delete_" + (counter++);
+
+			FormLink deleteLink = uifactory.addFormLink(docId, "delete", "delete", null, assignmentDocsContainer, Link.BUTTON_XSMALL);
+			deleteLink.setDomReplacementWrapperRequired(false);
+			deleteLink.setIconLeftCSS("o_icon o_icon_delete_item");
+			deleteLink.setUserObject(document);
+			documents.add(new FileInfos(document, deleteLink));
+		}
+		assignmentDocsContainer.setVisible(!documents.isEmpty());
+		assignmentDocsContainer.setDirty(true);
+	}
 
 	@Override
 	protected boolean validateFormLogic(UserRequest ureq) {
-		boolean allOk = true;
+		boolean allOk = super.validateFormLogic(ureq);
 		
 		titleEl.clearError();
 		if(!StringHelper.containsNonWhitespace(titleEl.getValue())) {
@@ -314,7 +457,15 @@ public class PageMetadataEditController extends FormBasicController {
 			}
 		}
 		
-		return allOk & super.validateFormLogic(ureq);
+		if(assignmentsTemplatesEl != null) {
+			assignmentsTemplatesEl.clearError();
+			if(assignmentsTemplatesEl.isVisible() && !assignmentsTemplatesEl.isOneSelected()) {
+				assignmentsTemplatesEl.setErrorKey("form.legende.mandatory", null);
+				allOk &= false;
+			}
+		}
+		
+		return allOk;
 	}
 
 	@Override
@@ -332,8 +483,15 @@ public class PageMetadataEditController extends FormBasicController {
 			if(imageAlignEl.isOneSelected()) {
 				align = PageImageAlign.valueOf(imageAlignEl.getSelectedKey());
 			}
-			page = portfolioService.appendNewPage(getIdentity(), title, summary, imagePath, align, selectSection);
 			
+			if(assignmentsTemplatesEl != null && assignmentsTemplatesEl.isVisible() && assignmentsTemplatesEl.isOneSelected()
+					&& StringHelper.containsNonWhitespace(assignmentsTemplatesEl.getSelectedKey())) {
+				Assignment assignmentTemplate = this.assignmentTemplatesMap.get(assignmentsTemplatesEl.getSelectedKey());
+				page = portfolioService.startAssignmentFromTemplate(assignmentTemplate.getKey(), getIdentity(), title, summary, imagePath, align, selectSection);
+				saveDocuments(page, assignmentTemplate);
+			} else {
+				page = portfolioService.appendNewPage(getIdentity(), title, summary, imagePath, align, selectSection);
+			}
 		} else {
 			page.setTitle(titleEl.getValue());
 			page.setSummary(summaryEl.getValue());
@@ -365,11 +523,37 @@ public class PageMetadataEditController extends FormBasicController {
 		fireEvent(ureq, Event.DONE_EVENT);
 	}
 	
+	private void saveDocuments(Page thePage, Assignment assignmentTemplate) {
+		if(assignmentTemplate.getAssignmentType() != AssignmentType.document || documents.isEmpty()) return;
+
+		String businessPath = getWindowControl().getBusinessControl().getAsString();
+		List<MediaHandler> availableHandlers = portfolioService.getMediaHandlers();
+
+		for(FileInfos document:documents) {
+			MediaHandler handler = null;
+			String mimeType = WebappHelper.getMimeType(document.getName());
+			for(MediaHandler availableHandler:availableHandlers) {
+				if(availableHandler.acceptMimeType(mimeType)) {
+					handler = availableHandler;
+					break;
+				}
+			}
+			
+			if(handler != null) {
+				UploadMedia mObject = new UploadMedia(document.getFile(), document.getName(), mimeType);
+				Media media = handler.createMedia(document.getName(), "", mObject, businessPath, getIdentity());
+				MediaPart part = new MediaPart();
+				part.setMedia(media);
+				portfolioService.appendNewPagePart(thePage, part);
+			}
+		}
+	}
+	
 	private SectionRef getSelectedSection() {
 		SectionRef selectSection = null;
 		if (sectionsEl != null && sectionsEl.isOneSelected() && sectionsEl.isEnabled() && sectionsEl.isVisible()) {
 			String selectedKey = sectionsEl.getSelectedKey();
-			selectSection = new SectionKeyRef(new Long(selectedKey));
+			selectSection = new SectionKeyRef(Long.valueOf(selectedKey));
 		}
 		return selectSection;
 	}
@@ -400,13 +584,96 @@ public class PageMetadataEditController extends FormBasicController {
 			} else {
 				try {
 					String selectedKey = bindersEl.getSelectedKey();
-					currentBinder = portfolioService.getBinderByKey(new Long(selectedKey));
+					currentBinder = portfolioService.getBinderByKey(Long.valueOf(selectedKey));
 					sectionsEl.setVisible(true);
 					updateSections();
 				} catch(NumberFormatException e) {
 					logError("", e);
 				}
 			}
+		} else if(assignmentsTemplatesEl == source) {
+			Assignment assignment = null;
+			if(assignmentsTemplatesEl.isEnabled() && assignmentsTemplatesEl.isOneSelected()
+					&& StringHelper.containsNonWhitespace(assignmentsTemplatesEl.getSelectedKey())) {
+				String templateKey = assignmentsTemplatesEl.getSelectedKey();
+				assignment = assignmentTemplatesMap.get(templateKey);
+			} else {
+				assignment = null;
+			}
+			updateForAssignmentTemplate(assignment);
+		} else if(assignmentDocUploadEl == source) {
+			if(assignmentDocUploadEl.isUploadSuccess()) {
+				processUpload();
+				updateDocumentsLayout();
+			}
+		} else if(source instanceof FormLink) {
+			FormLink link = (FormLink)source;
+			if("delete".equals(link.getCmd()) && link.getUserObject() instanceof File) {
+				doDeleteTempFile((File)link.getUserObject());
+			}
+		}
+	}
+	
+	private void processUpload() {
+		File directory = getTempFolder();
+		assignmentDocUploadEl.moveUploadFileTo(directory);
+		assignmentDocUploadEl.showError(false);
+		assignmentDocUploadEl.reset();
+	}
+	
+	private File getTempFolder() {
+		if(tempFolder == null) {
+			tempFolder = new File(WebappHelper.getTmpDir(), "upload-" + CodeHelper.getGlobalForeverUniqueID());
+			tempFolder.mkdirs();
+		}
+		return tempFolder;
+	}
+	
+	private List<File> getTempFolderFiles() {
+		File directory = getTempFolder();
+		List<File> temporaryFiles = new ArrayList<>();
+		File[] files = directory.listFiles(new SystemFilenameFilter(true, false));
+		for(File file:files) {
+			temporaryFiles.add(file);
+		}
+		return temporaryFiles;
+	}
+	
+	private void doDeleteTempFile(File file) {
+		if(file != null && file.exists()) {
+			try {
+				Files.delete(file.toPath());
+			} catch (IOException e) {
+				logError("", e);
+			}
+		}
+		updateDocumentsLayout();
+	}
+	
+	public class FileInfos {
+		
+		private final File file;
+		private final FormLink deleteLink;
+		
+		public FileInfos(File file, FormLink deleteLink) {
+			this.file = file;
+			this.deleteLink = deleteLink;
+		}
+		
+		public String getName() {
+			return file.getName();
+		}
+		
+		public long getSize() {
+			return file.length();
+		}
+
+		public File getFile() {
+			return file;
+		}
+
+		public FormLink getDeleteLink() {
+			return deleteLink;
 		}
 	}
 }
