@@ -22,16 +22,14 @@ package org.olat.portfolio.model.artefacts;
 
 import org.apache.lucene.document.Document;
 import org.olat.core.CoreSpringFactory;
-import org.olat.core.commons.modules.bc.FolderConfig;
-import org.olat.core.commons.modules.bc.meta.MetaInfo;
-import org.olat.core.commons.modules.bc.meta.tagged.MetaTagged;
-import org.olat.core.commons.modules.bc.vfs.OlatRootFileImpl;
+import org.olat.core.commons.services.vfs.VFSMetadata;
 import org.olat.core.gui.UserRequest;
 import org.olat.core.gui.control.Controller;
 import org.olat.core.gui.control.WindowControl;
-import org.olat.core.logging.OLog;
+import org.apache.logging.log4j.Logger;
 import org.olat.core.logging.Tracing;
 import org.olat.core.util.StringHelper;
+import org.olat.core.util.vfs.VFSConstants;
 import org.olat.core.util.vfs.VFSItem;
 import org.olat.core.util.vfs.VFSLeaf;
 import org.olat.core.util.vfs.VFSManager;
@@ -57,31 +55,13 @@ import org.olat.search.service.document.file.FileDocumentFactory;
  */
 public class FileArtefactHandler extends EPAbstractHandler<FileArtefact> {
 	
-	private static final OLog log = Tracing.createLoggerFor(FileArtefactHandler.class);
-
-	/**
-	 * @see org.olat.portfolio.EPAbstractHandler#setEnabled(boolean)
-	 */
-	@Override
-	public void setEnabled(boolean enabled) {
-		super.setEnabled(enabled);
-
-		// en-/disable ePortfolio collecting link in folder component
-		// needs to stay here in olat3-context, as olatcore's folder-comp. doesn't
-		// know about ePortfolio itself!
-		FolderConfig.setEPortfolioAddEnabled(enabled);
-	}
+	private static final Logger log = Tracing.createLoggerFor(FileArtefactHandler.class);
 
 	@Override
 	public FileArtefact createArtefact() {
-		FileArtefact artefact = new FileArtefact();
-		return artefact;
+		return new FileArtefact();
 	}
 
-	/**
-	 * @see org.olat.portfolio.EPAbstractHandler#prefillArtefactAccordingToSource(org.olat.portfolio.model.artefacts.AbstractArtefact,
-	 *      java.lang.Object)
-	 */
 	@Override
 	public void prefillArtefactAccordingToSource(AbstractArtefact artefact, Object source) {
 		super.prefillArtefactAccordingToSource(artefact, source);
@@ -89,9 +69,9 @@ public class FileArtefactHandler extends EPAbstractHandler<FileArtefact> {
 			VFSItem fileSource = (VFSItem) source;
 			((FileArtefact) artefact).setFilename(fileSource.getName());
 			
-			MetaInfo meta = null;
-			if(fileSource instanceof MetaTagged) {
-				meta = ((MetaTagged)fileSource).getMetaInfo();
+			VFSMetadata meta = null;
+			if(fileSource.canMeta() == VFSConstants.YES) {
+				meta = fileSource.getMetaInfo();
 			}
 
 			if (meta != null && StringHelper.containsNonWhitespace(meta.getTitle())) {
@@ -104,13 +84,14 @@ public class FileArtefactHandler extends EPAbstractHandler<FileArtefact> {
 			}
 			artefact.setSignature(60);
 
-			String path = ((OlatRootFileImpl) fileSource).getRelPath();
+			String path = fileSource.getRelPath();
 			String[] pathElements = path.split("/");
 
 			String finalBusinessPath = null;
 			String sourceInfo = null;
 			// used to rebuild businessPath and source for a file:
-			if (pathElements[1].equals("homes") && meta != null && pathElements[2].equals(meta.getAuthor())) {
+			String author = meta != null && meta.getAuthor() != null ? meta.getAuthor().getKey().toString() : null;
+			if (pathElements[1].equals("homes") && meta != null && pathElements[2].equals(author)) {
 				// from users briefcase
 				String lastParts = "/";
 				for (int i = 4; i < (pathElements.length - 1); i++) {
@@ -123,19 +104,19 @@ public class FileArtefactHandler extends EPAbstractHandler<FileArtefact> {
 				for (int i = 5; i < (pathElements.length - 1); i++) {
 					lastParts = lastParts + pathElements[i] + "/";
 				}
-				BusinessGroup bGroup = CoreSpringFactory.getImpl(BusinessGroupService.class).loadBusinessGroup(new Long(pathElements[4]));
+				BusinessGroup bGroup = CoreSpringFactory.getImpl(BusinessGroupService.class).loadBusinessGroup(Long.valueOf(pathElements[4]));
 				if (bGroup != null) {
 					sourceInfo = bGroup.getName() + " -> " + lastParts + " -> " + fileSource.getName();
 				}
 				finalBusinessPath = "[BusinessGroup:" + pathElements[4] + "][toolfolder:0][path=" + lastParts + fileSource.getName() + ":0]";
 			} else if (pathElements[4].equals("coursefolder")) {
 				// the course folder
-				sourceInfo = RepositoryManager.getInstance().lookupDisplayNameByOLATResourceableId(new Long(pathElements[2]))
+				sourceInfo = RepositoryManager.getInstance().lookupDisplayNameByOLATResourceableId(Long.valueOf(pathElements[2]))
 						+ " -> " + fileSource.getName();
 
 			} else if (pathElements[1].equals("course") && pathElements[3].equals("foldernodes")) {
 				// folders inside a course
-				sourceInfo = RepositoryManager.getInstance().lookupDisplayNameByOLATResourceableId(new Long(pathElements[2]))
+				sourceInfo = RepositoryManager.getInstance().lookupDisplayNameByOLATResourceableId(Long.valueOf(pathElements[2]))
 						+ " -> " + pathElements[4] + " -> " + fileSource.getName();
 				finalBusinessPath = "[RepositoryEntry:" + pathElements[2] + "][CourseNode:" + pathElements[4] + "]";
 			}
@@ -172,7 +153,7 @@ public class FileArtefactHandler extends EPAbstractHandler<FileArtefact> {
 		String filename = fileArtefact.getFilename();
 		
 		VFSItem file = ePFManager.getArtefactContainer(artefact).resolve(filename);
-		if (file != null && file instanceof VFSLeaf) {
+		if (file instanceof VFSLeaf) {
 			try {
 				FileDocumentFactory docFactory = CoreSpringFactory.getImpl(FileDocumentFactory.class);
 				if (docFactory.isFileSupported((VFSLeaf)file)) {
