@@ -42,6 +42,7 @@ import org.olat.core.logging.activity.ThreadLocalUserActivityLogger;
 import org.olat.core.util.StringHelper;
 import org.olat.core.util.Util;
 import org.olat.repository.RepositoryEntry;
+import org.olat.repository.RepositoryModule;
 import org.olat.repository.RepositoryService;
 import org.olat.repository.controllers.EntryChangedEvent;
 import org.olat.repository.controllers.EntryChangedEvent.Change;
@@ -61,12 +62,15 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 	
 	private FormLink deleteButton;
 	private MultipleSelectionElement acknowledgeEl;
+	private MultipleSelectionElement notificationEl;
 	
 	private final int numOfMembers;
 	private final boolean notAllDeleteable;
 	private final List<RepositoryEntry> rows;
 	private final List<ReferenceInfos> references;
 	
+	@Autowired
+	private RepositoryModule repositoryModule;
 	@Autowired
 	private ReferenceManager referenceManager;
 	@Autowired
@@ -79,7 +83,7 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 		this.rows = rows;
 		this.notAllDeleteable = notAllDeleteable;
 		numOfMembers = repositoryService.countMembers(rows, getIdentity());
-		references = referenceManager.getReferencesInfos(rows, getIdentity(), ureq.getUserSession().getRoles());
+		references = referenceManager.getReferencesInfos(rows, getIdentity());
 		if(references.size() > 1) {
 			Collections.sort(references, new ReferenceInfosComparator(Collator.getInstance(getLocale())));
 		}
@@ -91,7 +95,7 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 	protected void initForm(FormItemContainer formLayout, Controller listener, UserRequest ureq) {
 		if(formLayout instanceof FormLayoutContainer) {
 			FormLayoutContainer layout = (FormLayoutContainer)formLayout;
-			layout.contextPut("notAllDeleteable", new Boolean(notAllDeleteable));
+			layout.contextPut("notAllDeleteable", Boolean.valueOf(notAllDeleteable));
 			layout.contextPut("numOfMembers", Integer.toString(numOfMembers));
 
 			FormLayoutContainer layoutCont = FormLayoutContainer.createDefaultFormLayout("confirm", getTranslator());
@@ -105,13 +109,20 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 			}
 			uifactory.addStaticTextElement("rows", "details.delete.entries", message.toString(), layoutCont);
 
-			String[] acknowledge = new String[] { translate("details.delete.acknowledge.msg") };
+			String[] acknowledge = new String[] { translate("details.delete.soft.acknowledge.msg") };
 			acknowledgeEl = uifactory.addCheckboxesHorizontal("confirm", "details.delete.acknowledge", layoutCont, new String[]{ "" },  acknowledge);
+			
+			String[] notifications = new String[] { translate("details.notifications.acknowledge.value") };
+			notificationEl = uifactory.addCheckboxesHorizontal("notifications", "details.notifications.acknowledge", layoutCont, new String[]{ "" },  notifications);
+			if(repositoryModule.isLifecycleNotificationByCloseDeleteEnabled()) {
+				notificationEl.select("", true);
+				notificationEl.setEnabled(ureq.getUserSession().getRoles().isSystemAdmin());
+			}
 			
 			FormLayoutContainer buttonsCont = FormLayoutContainer.createButtonLayout("buttons", getTranslator());
 			layoutCont.add(buttonsCont);
-			deleteButton = uifactory.addFormLink("details.delete", buttonsCont, Link.BUTTON);
 			uifactory.addFormCancelButton("cancel", buttonsCont, ureq, getWindowControl());
+			deleteButton = uifactory.addFormLink("details.delete", buttonsCont, Link.BUTTON);
 		}
 	}
 	
@@ -122,7 +133,7 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 
 	@Override
 	protected boolean validateFormLogic(UserRequest ureq) {
-		boolean allOk = true;
+		boolean allOk = super.validateFormLogic(ureq);
 		
 		acknowledgeEl.clearError();
 		if(!acknowledgeEl.isAtLeastSelected(1)) {
@@ -130,7 +141,7 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 			allOk &= false;
 		}
 		
-		return allOk & super.validateFormLogic(ureq);
+		return allOk;
 	}
 
 	@Override
@@ -167,12 +178,8 @@ public class ConfirmDeleteSoftlyController extends FormBasicController {
 		for(RepositoryEntry entry:entries) {
 			RepositoryEntry reloadedEntry = repositoryService.loadByKey(entry.getKey());
 			if(reloadedEntry != null) {
-				try {
-					reloadedEntry = repositoryService.deleteSoftly(reloadedEntry, getIdentity(), false);
-				} catch (RepositoryEntryDeletionException e) {
-					allOk = false;
-					continue;
-				}
+				boolean sendNotifications = notificationEl.isAtLeastSelected(1);
+				reloadedEntry = repositoryService.deleteSoftly(reloadedEntry, getIdentity(), false, sendNotifications);
 				ThreadLocalUserActivityLogger.log(LearningResourceLoggingAction.LEARNING_RESOURCE_TRASH, getClass(),
 						LoggingResourceable.wrap(reloadedEntry, OlatResourceableType.genRepoEntry));
 				
