@@ -96,11 +96,11 @@ public class DefaultRepositoryEntryDataSource implements FlexiTableDataSourceDel
 	}
 
 	@Override
-    public final ResultInfos<RepositoryEntryRow> getRows(String query, List<FlexiTableFilter> filters,
-            List<String> condQueries, int firstResult, int maxResults, SortKey... orderBy) {
-
-        if(filters != null && filters.size() > 0 && filters.get(0) != null) {
-            String filter = filters.get(0).getFilter();
+	public final ResultInfos<RepositoryEntryRow> getRows(String query, List<FlexiTableFilter> filters, 
+			List<String> condQueries, int firstResult, int maxResults, SortKey... orderBy) {
+		
+		if(filters != null && !filters.isEmpty() && filters.get(0) != null) {
+			String filter = filters.get(0).getFilter();
 			if(StringHelper.containsNonWhitespace(filter)) {
 				searchParams.setFilters(Collections.singletonList(Filter.valueOf(filter)));
 			} else {
@@ -124,9 +124,9 @@ public class DefaultRepositoryEntryDataSource implements FlexiTableDataSourceDel
 
 		List<RepositoryEntryMyView> views = repositoryService.searchMyView(searchParams, firstResult, maxResults);
 		List<RepositoryEntryRow> rows = processViewModel(views);
-		ResultInfos<RepositoryEntryRow> results = new DefaultResultInfos<RepositoryEntryRow>(firstResult + rows.size(), -1, rows);
+		ResultInfos<RepositoryEntryRow> results = new DefaultResultInfos<>(firstResult + rows.size(), -1, rows);
 		if(firstResult == 0 && views.size() < maxResults) {
-			count = new Integer(views.size());
+			count = Integer.valueOf(views.size());
 		}
 		return results;
 	}
@@ -145,29 +145,17 @@ public class DefaultRepositoryEntryDataSource implements FlexiTableDataSourceDel
 		List<OLATResourceAccess> resourcesWithOffer = acService.filterResourceWithAC(resourcesWithAC);
 		repositoryService.filterMembership(searchParams.getIdentity(), repoKeys);
 
-		LinkedHashMap<RepositoryEntryMyView, RepositoryEntryRow> mapOfRepositoryEntryViewsAndRepositoryEntryRows =
-				repositoryEntryRowsFactory.create(repoEntries);
-
 		List<RepositoryEntryRow> items = new ArrayList<>();
-		for (Map.Entry<RepositoryEntryMyView, RepositoryEntryRow> mapEntry : mapOfRepositoryEntryViewsAndRepositoryEntryRows.entrySet()) {
+		for(RepositoryEntryMyView entry:repoEntries) {
+			RepositoryEntryRow row = new RepositoryEntryRow(entry);
 
-			RepositoryEntryMyView entry = mapEntry.getKey();
-			RepositoryEntryRow row = mapEntry.getValue();
+			VFSLeaf image = repositoryManager.getImage(entry.getKey(), entry.getOlatResource());
+			if(image != null) {
+				row.setThumbnailRelPath(uifactory.getMapperThumbnailUrl() + "/" + image.getName());
+			}
 
-			List<PriceMethod> types = new ArrayList<PriceMethod>();
-			if (entry.isMembersOnly()) {
-				// members only always show lock icon
-				/**
-				 * TODO sev26
-				 * Accessing {@link RepositoryEntryDataSourceUIFactory} this
-				 * way because the entire block here should be in the factory
-				 * class or better in the {@link RepositoryEntryRow} class.
-				 */
-				types.add(new PriceMethod("", "o_ac_membersonly_icon",
-						repositoryEntryRowsFactory.getUiFactory()
-								.getTranslator()
-								.translate("cif.access.membersonly.short")));
-			} else {
+			List<PriceMethod> types = new ArrayList<>(3);
+			if(entry.isBookable()) {
 				// collect access control method icons
 				OLATResource resource = entry.getOlatResource();
 				for(OLATResourceAccess resourceAccess:resourcesWithOffer) {
@@ -183,8 +171,11 @@ public class DefaultRepositoryEntryDataSource implements FlexiTableDataSourceDel
 						}
 					}
 				}
-			}
-
+			} else if (!entry.isAllUsers() && !entry.isGuests()) {
+				// members only always show lock icon
+				types.add(new PriceMethod("", "o_ac_membersonly_icon", uifactory.getTranslator().translate("cif.access.membersonly.short")));
+			} 
+			
 			row.setMember(repoKeys.contains(entry.getKey()));
 
 			if(!types.isEmpty()) {
