@@ -20,6 +20,10 @@
 
 package org.olat.resource.accesscontrol.manager;
 
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
@@ -28,18 +32,24 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 
+import org.apache.logging.log4j.Logger;
 import org.olat.basesecurity.GroupRoles;
 import org.olat.basesecurity.IdentityRef;
+import org.olat.commons.calendar.CalendarUtils;
 import org.olat.core.commons.persistence.DB;
 import org.olat.core.commons.persistence.SortKey;
 import org.olat.core.id.Identity;
 import org.olat.core.id.Roles;
-import org.olat.core.logging.OLog;
 import org.olat.core.logging.Tracing;
 import org.olat.core.util.StringHelper;
+import org.olat.core.util.mail.MailPackage;
+import org.olat.core.util.openxml.OpenXMLWorkbook;
+import org.olat.core.util.openxml.OpenXMLWorksheet;
+import org.olat.core.util.openxml.OpenXMLWorksheet.Row;
 import org.olat.group.BusinessGroup;
 import org.olat.group.BusinessGroupService;
 import org.olat.group.manager.BusinessGroupDAO;
@@ -47,11 +57,11 @@ import org.olat.group.manager.BusinessGroupRelationDAO;
 import org.olat.group.model.EnrollState;
 import org.olat.repository.RepositoryEntry;
 import org.olat.repository.RepositoryEntryRef;
-import org.olat.repository.RepositoryEntryShort;
+import org.olat.repository.RepositoryMailing;
 import org.olat.repository.RepositoryManager;
 import org.olat.repository.RepositoryService;
+import org.olat.repository.manager.RepositoryEntryDAO;
 import org.olat.repository.manager.RepositoryEntryRelationDAO;
-import org.olat.repository.model.RepositoryEntryShortImpl;
 import org.olat.resource.OLATResource;
 import org.olat.resource.OLATResourceManager;
 import org.olat.resource.accesscontrol.ACService;
@@ -67,32 +77,38 @@ import org.olat.resource.accesscontrol.method.AccessMethodHandler;
 import org.olat.resource.accesscontrol.model.ACResourceInfo;
 import org.olat.resource.accesscontrol.model.ACResourceInfoImpl;
 import org.olat.resource.accesscontrol.model.AccessMethod;
+import org.olat.resource.accesscontrol.model.AccessMethodSecurityCallback;
 import org.olat.resource.accesscontrol.model.AccessTransactionStatus;
 import org.olat.resource.accesscontrol.model.OLATResourceAccess;
 import org.olat.resource.accesscontrol.model.PSPTransactionStatus;
 import org.olat.resource.accesscontrol.model.RawOrderItem;
 import org.olat.resource.accesscontrol.ui.OrderTableItem;
 import org.olat.resource.accesscontrol.ui.OrderTableItem.Status;
+import org.olat.resource.accesscontrol.ui.PriceFormat;
+import org.olat.user.UserDataExportable;
+import org.olat.user.manager.ManifestBuilder;
 import org.olat.user.propertyhandlers.UserPropertyHandler;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 /**
- * 
+ *
  * Description:<br>
  * The access control is not intend for security check.
- * 
+ *
  * <P>
  * Initial Date:  14 avr. 2011 <br>
  * @author srosse, stephane.rosse@frentix.com, http://www.frentix.com
  */
 @Service("acService")
-public class ACFrontendManager implements ACService {
-	
-	private static final OLog log = Tracing.createLoggerFor(ACFrontendManager.class);
-	
+public class ACFrontendManager implements ACService, UserDataExportable {
+
+	private static final Logger log = Tracing.createLoggerFor(ACFrontendManager.class);
+
 	@Autowired
 	private DB dbInstance;
+	@Autowired
+	private RepositoryEntryDAO repositoryEntryDao;
 	@Autowired
 	private RepositoryManager repositoryManager;
 	@Autowired
@@ -112,11 +128,11 @@ public class ACFrontendManager implements ACService {
 	@Autowired
 	private BusinessGroupDAO businessGroupDao;
 	@Autowired
+	private BusinessGroupService businessGroupService;
+	@Autowired
 	private BusinessGroupRelationDAO businessGroupRelationDao;
 	@Autowired
 	private RepositoryEntryRelationDAO repositoryEntryRelationDao;
-	@Autowired
-	private BusinessGroupService businessGroupService;
 
 	/**
 	 * The rule to access the repository entry:<br/>
@@ -134,7 +150,7 @@ public class ACFrontendManager implements ACService {
 		if(!accessModule.isEnabled()) {
 			return new AccessResult(true);
 		}
-		
+
 		boolean member;
 		if(knowMember == null) {
 			member = repositoryService.isMember(forId, entry);
@@ -144,40 +160,41 @@ public class ACFrontendManager implements ACService {
 		if(member) {
 			return new AccessResult(true);
 		}
-		
-		List<Offer> offers = accessManager.findOfferByResource(entry.getOlatResource(), true, new Date());
+
+		Date now = dateNow();
+		List<Offer> offers = accessManager.findOfferByResource(entry.getOlatResource(), true, now);
 		if(offers.isEmpty()) {
 			if(methodManager.isValidMethodAvailable(entry.getOlatResource(), null)) {
 				//not open for the moment: no valid offer at this date but some methods are defined
 				return new AccessResult(false);
 			} else {
 				return new AccessResult(true);
-			}	
+			}
 		}
 		return isAccessible(forId, offers, allowNonInteractiveAccess);
 	}
-	
+
 	@Override
 	public AccessResult isAccessible(RepositoryEntry entry, Identity forId, boolean allowNonInteractiveAccess) {
 		if(!accessModule.isEnabled()) {
 			return new AccessResult(true);
 		}
-		
+
 		boolean member = repositoryService.isMember(forId, entry);
-		return isAccessible(entry, forId, new Boolean(member), allowNonInteractiveAccess);
+		return isAccessible(entry, forId, Boolean.valueOf(member), allowNonInteractiveAccess);
 	}
-	
+
 	/**
-	 * 
+	 *
 	 * @param resource
-	 * @param atDate 
+	 * @param atDate
 	 * @return
 	 */
 	@Override
 	public boolean isResourceAccessControled(OLATResource resource, Date atDate) {
 		return methodManager.isValidMethodAvailable(resource, atDate);
 	}
-	
+
 	/**
 	 * The rule to access a business group:<br/>
 	 * -No offer, access is free<br/>
@@ -201,21 +218,22 @@ public class ACFrontendManager implements ACService {
 		if(roles.contains(GroupRoles.participant.name())) {
 			return new AccessResult(true);
 		}
-		
+
+		Date now = dateNow();
 		OLATResource resource = OLATResourceManager.getInstance().findResourceable(group);
-		List<Offer> offers = accessManager.findOfferByResource(resource, true, new Date());
+		List<Offer> offers = accessManager.findOfferByResource(resource, true, now);
 		if(offers.isEmpty()) {
 			if(methodManager.isValidMethodAvailable(resource, null)) {
 				//not open for the moment: no valid offer at this date but some methods are defined
 				return new AccessResult(false);
 			} else {
 				return new AccessResult(true);
-			}	
+			}
 		}
-		
+
 		return isAccessible(forId, offers, allowNonInteractiveAccess);
 	}
-	
+
 	protected AccessResult isAccessible(Identity identity, List<Offer> offers, boolean allowNonInteractiveAccess) {
 		List<OfferAccess> offerAccess = methodManager.getOfferAccess(offers, true);
 		if(offerAccess.isEmpty()) {
@@ -246,19 +264,20 @@ public class ACFrontendManager implements ACService {
 		if(repoEntries == null || repoEntries.isEmpty()) {
 			return Collections.emptyList();
 		}
-		Set<String> resourceTypes = new HashSet<String>();
-		List<Long> resourceKeys = new ArrayList<Long>();
+		Set<String> resourceTypes = new HashSet<>();
+		List<Long> resourceKeys = new ArrayList<>();
 		for(RepositoryEntry entry:repoEntries) {
 			OLATResource ores = entry.getOlatResource();
 			resourceKeys.add(ores.getKey());
 			resourceTypes.add(ores.getResourceableTypeName());
 		}
-		
+
 		String resourceType = null;
 		if(resourceTypes.size() == 1) {
 			resourceType = resourceTypes.iterator().next();
 		}
-		return methodManager.getAccessMethodForResources(resourceKeys, resourceType, "BusinessGroup", true, new Date());
+		Date now = dateNow();
+		return methodManager.getAccessMethodForResources(resourceKeys, resourceType, "BusinessGroup", true, now);
 	}
 
 	@Override
@@ -266,18 +285,19 @@ public class ACFrontendManager implements ACService {
 		if(resources == null || resources.isEmpty()) {
 			return Collections.emptyList();
 		}
-		Set<String> resourceTypes = new HashSet<String>();
-		List<Long> resourceKeys = new ArrayList<Long>();
+		Set<String> resourceTypes = new HashSet<>();
+		List<Long> resourceKeys = new ArrayList<>();
 		for(OLATResource resource:resources) {
 			resourceKeys.add(resource.getKey());
 			resourceTypes.add(resource.getResourceableTypeName());
 		}
-		
+
 		String resourceType = null;
 		if(resourceTypes.size() == 1) {
 			resourceType = resourceTypes.iterator().next();
 		}
-		return methodManager.getAccessMethodForResources(resourceKeys, resourceType, "BusinessGroup", true, new Date());
+		Date now = dateNow();
+		return methodManager.getAccessMethodForResources(resourceKeys, resourceType, "BusinessGroup", true, now);
 	}
 
 	@Override
@@ -289,23 +309,23 @@ public class ACFrontendManager implements ACService {
 	public List<Offer> findOfferByResource(OLATResource resource, boolean valid, Date atDate) {
 		return accessManager.findOfferByResource(resource, valid, atDate);
 	}
-	
+
 	/**
-	 * 
+	 *
 	 * @param resourceKeys This parameter is mandatory and must not be empty!
 	 */
 	@Override
 	public List<OLATResourceAccess> getAccessMethodForResources(Collection<Long> resourceKeys, String resourceType, boolean valid, Date atDate) {
 		if(resourceKeys == null || resourceKeys.isEmpty()) {
-			return new ArrayList<OLATResourceAccess>();
+			return new ArrayList<>();
 		}
 		return methodManager.getAccessMethodForResources(resourceKeys, resourceType, null, valid, atDate);
 	}
 
 	/**
 	 * Get the list of access methods for a business group that are currently available
-	 * @param group 
-	 * @param valid 
+	 * @param group
+	 * @param valid
 	 * @param atDate
 	 * @return The list of OfferAccess objects that represent available access methods
 	 */
@@ -323,6 +343,16 @@ public class ACFrontendManager implements ACService {
 	}
 
 	@Override
+	public List<OfferAccess> getValidOfferAccess(OLATResource resource, AccessMethod method) {
+		return methodManager.getValidOfferAccess(resource, method);
+	}
+
+	@Override
+	public List<AccessMethod> getAvailableMethodsByType(Class<? extends AccessMethod> type) {
+		return methodManager.getAvailableMethodsByType(type);
+	}
+
+	@Override
 	public Offer save(Offer offer) {
 		return accessManager.saveOffer(offer);
 	}
@@ -335,37 +365,37 @@ public class ACFrontendManager implements ACService {
 		}
 		return methodManager.save(link);
 	}
-	
+
 	@Override
 	public AccessResult accessResource(Identity identity, OfferAccess link, Object argument) {
 		if(link == null || link.getOffer() == null || link.getMethod() == null) {
-			log.audit("Access refused (no offer) to: " + link + " for " + identity);
+			log.info(Tracing.M_AUDIT, "Access refused (no offer) to: " + link + " for " + identity);
 			return new AccessResult(false);
 		}
-		
+
 		AccessMethodHandler handler = accessModule.getAccessMethodHandler(link.getMethod().getType());
 		if(handler == null) {
-			log.audit("Access refused (no handler method) to: " + link + " for " + identity);
+			log.info(Tracing.M_AUDIT, "Access refused (no handler method) to: " + link + " for " + identity);
 			return new AccessResult(false);
 		}
-		
+
 		if(handler.checkArgument(link, argument)) {
 			if(allowAccesToResource(identity, link.getOffer())) {
 				Order order = orderManager.saveOneClick(identity, link);
 				AccessTransaction transaction = transactionManager.createTransaction(order, order.getParts().get(0), link.getMethod());
 				transactionManager.save(transaction);
 				dbInstance.commit();
-				log.audit("Access granted to: " + link + " for " + identity);
+				log.info(Tracing.M_AUDIT, "Access granted to: " + link + " for " + identity);
 				return new AccessResult(true);
 			} else {
-				log.audit("Access error to: " + link + " for " + identity);
+				log.info(Tracing.M_AUDIT, "Access error to: " + link + " for " + identity);
 			}
 		} else {
-			log.audit("Access refused to: " + link + " for " + identity);
+			log.info(Tracing.M_AUDIT, "Access refused to: " + link + " for " + identity);
 		}
 		return new AccessResult(false);
 	}
-	
+
 	@Override
 	public void acceptReservationToResource(Identity identity, ResourceReservation reservation) {
 		OLATResource resource = reservation.getResource();
@@ -391,7 +421,7 @@ public class ACFrontendManager implements ACService {
 	public ResourceReservation getReservation(Identity identity, OLATResource resource) {
 		return reservationDao.loadReservation(identity, resource);
 	}
-	
+
 	@Override
 	public List<ResourceReservation> getReservations(List<OLATResource> resources) {
 		return reservationDao.loadReservations(resources);
@@ -422,7 +452,7 @@ public class ACFrontendManager implements ACService {
 				if(reservation != null) {
 					reserved = true;
 				}
-				
+
 				int currentCount = businessGroupService.countMembers(reloadedGroup, GroupRoles.participant.name());
 				int reservations = reservationDao.countReservations(resource);
 				if(currentCount + reservations < reloadedGroup.getMaxParticipants().intValue()) {
@@ -442,7 +472,7 @@ public class ACFrontendManager implements ACService {
 		Date oneHourTimeout = cal.getTime();
 		List<ResourceReservation> oldReservations = reservationDao.loadExpiredReservation(oneHourTimeout);
 		for(ResourceReservation reservation:oldReservations) {
-			log.audit("Remove reservation:" + reservation);
+			log.info(Tracing.M_AUDIT, "Remove reservation:" + reservation);
 			reservationDao.deleteReservation(reservation);
 		}
 	}
@@ -453,25 +483,30 @@ public class ACFrontendManager implements ACService {
 		if(offer.getKey() == null) {
 			return false;
 		}
-		
+
 		//check the resource
 		OLATResource resource = offer.getResource();
 		if(resource == null || resource.getKey() == null || resource.getResourceableId() == null || resource.getResourceableTypeName() == null) {
 			return false;
 		}
-		
+
 		String resourceType = resource.getResourceableTypeName();
 		if("BusinessGroup".equals(resourceType)) {
 			BusinessGroup group = businessGroupService.loadBusinessGroup(resource);
 			if(group != null) {
-				EnrollState result = businessGroupService.enroll(identity, null, identity, group, null);
-				return result.isFailed() ? Boolean.FALSE : Boolean.TRUE;
+				MailPackage mailing = new MailPackage(offer.isConfirmationEmail());
+				EnrollState result = businessGroupService.enroll(identity, null, identity, group, mailing);
+				return !result.isFailed();
 			}
 		} else {
-			RepositoryEntryRef entry = repositoryManager.lookupRepositoryEntry(resource, false);
+			RepositoryEntry entry = repositoryEntryDao.loadByResource(resource);
 			if(entry != null) {
 				if(!repositoryEntryRelationDao.hasRole(identity, entry, GroupRoles.participant.name())) {
 					repositoryEntryRelationDao.addRole(identity, entry, GroupRoles.participant.name());
+					if(offer.isConfirmationEmail()) {
+						MailPackage mailing = new MailPackage(offer.isConfirmationEmail());
+						RepositoryMailing.sendEmail(identity, identity, entry, RepositoryMailing.Type.addParticipantItself, mailing);
+					}
 				}
 				return true;
 			}
@@ -485,13 +520,13 @@ public class ACFrontendManager implements ACService {
 		if(offer.getKey() == null) {
 			return false;
 		}
-		
+
 		//check the resource
 		OLATResource resource = offer.getResource();
 		if(resource == null || resource.getKey() == null || resource.getResourceableId() == null || resource.getResourceableTypeName() == null) {
 			return false;
 		}
-		
+
 		String resourceType = resource.getResourceableTypeName();
 		if("BusinessGroup".equals(resourceType)) {
 			BusinessGroup group = businessGroupService.loadBusinessGroup(resource);
@@ -502,7 +537,7 @@ public class ACFrontendManager implements ACService {
 				return true;
 			}
 		} else {
-			RepositoryEntryRef entry = repositoryManager.lookupRepositoryEntry(resource, false);
+			RepositoryEntryRef entry = repositoryEntryDao.loadByResource(resource);
 			if(entry != null) {
 				if(repositoryEntryRelationDao.hasRole(identity, entry, GroupRoles.participant.name())) {
 					repositoryEntryRelationDao.removeRole(identity, entry, GroupRoles.participant.name());
@@ -522,22 +557,22 @@ public class ACFrontendManager implements ACService {
 				return group.getName();
 			}
 		} else {
-			RepositoryEntry entry = repositoryManager.lookupRepositoryEntry(resource, false);
+			RepositoryEntry entry = repositoryEntryDao.loadByResource(resource);
 			if(entry != null) {
 				return entry.getDisplayname();
 			}
 		}
 		return null;
 	}
-	
+
 	@Override
 	public List<ACResourceInfo> getResourceInfos(List<OLATResource> resources) {
 		if(resources == null || resources.isEmpty()) {
 			return Collections.emptyList();
 		}
-		
-		List<OLATResource> groupResources = new ArrayList<OLATResource>(resources.size());
-		List<OLATResource> repositoryResources = new ArrayList<OLATResource>(resources.size());
+
+		List<OLATResource> groupResources = new ArrayList<>(resources.size());
+		List<OLATResource> repositoryResources = new ArrayList<>(resources.size());
 		for(OLATResource resource:resources) {
 			String resourceType = resource.getResourceableTypeName();
 			if("BusinessGroup".equals(resourceType)) {
@@ -547,10 +582,10 @@ public class ACFrontendManager implements ACService {
 			}
 		}
 
-		List<ACResourceInfo> resourceInfos = new ArrayList<ACResourceInfo>(resources.size());
+		List<ACResourceInfo> resourceInfos = new ArrayList<>(resources.size());
 		if(!groupResources.isEmpty()) {
-			List<Long> groupKeys = new ArrayList<Long>(groupResources.size());
-			Map<Long, OLATResource> groupMapKeys = new HashMap<Long, OLATResource>(groupResources.size() * 2 + 1);
+			List<Long> groupKeys = new ArrayList<>(groupResources.size());
+			Map<Long, OLATResource> groupMapKeys = new HashMap<>(groupResources.size() * 2 + 1);
 			for(OLATResource groupResource:groupResources) {
 				groupKeys.add(groupResource.getResourceableId());
 			}
@@ -565,12 +600,12 @@ public class ACFrontendManager implements ACService {
 			}
 		}
 		if(!repositoryResources.isEmpty()) {
-			List<RepositoryEntryShort> repoEntries = repositoryManager.loadRepositoryEntryShorts(repositoryResources);
-			for(RepositoryEntryShort repoEntry:repoEntries) {
+			List<RepositoryEntry> repoEntries = repositoryEntryDao.loadByResources(repositoryResources);
+			for(RepositoryEntry repoEntry:repoEntries) {
 				ACResourceInfoImpl info = new ACResourceInfoImpl();
 				info.setName(repoEntry.getDisplayname());
-				info.setDescription(((RepositoryEntryShortImpl)repoEntry).getDescription());
-				info.setResource(((RepositoryEntryShortImpl)repoEntry).getOlatResource());
+				info.setDescription(repoEntry.getDescription());
+				info.setResource(repoEntry.getOlatResource());
 				resourceInfos.add(info);
 			}
 		}
@@ -584,7 +619,18 @@ public class ACFrontendManager implements ACService {
 
 	@Override
 	public List<AccessMethod> getAvailableMethods(Identity identity, Roles roles) {
-		return methodManager.getAvailableMethods(identity, roles);
+		List<AccessMethod> methods = methodManager.getAvailableMethods();
+		
+		List<AccessMethod> allowedMethods = new ArrayList<>();
+		for(AccessMethod method:methods) {
+			AccessMethodHandler handler = accessModule.getAccessMethodHandler(method.getType());
+			AccessMethodSecurityCallback secCallback = handler.getSecurityCallback(identity, roles);
+			if(secCallback.canUse()) {
+				allowedMethods.add(method);
+			}
+		}
+		
+		return methods;
 	}
 
 	@Override
@@ -606,7 +652,12 @@ public class ACFrontendManager implements ACService {
 	public List<Order> findOrders(Identity delivery, OrderStatus... status) {
 		return orderManager.findOrdersByDelivery(delivery, status);
 	}
-	
+
+	@Override
+	public List<Order> findOrder(OLATResource resource, Identity identity, AccessMethod method) {
+		return orderManager.findOrdersByResource(resource, identity, method);
+	}
+
 	@Override
 	public List<AccessTransaction> findAccessTransactions(Order order) {
 		return transactionManager.loadTransactionsForOrder(order);
@@ -636,7 +687,7 @@ public class ACFrontendManager implements ACService {
 		for(AccessMethod method:methods) {
 			methodMap.put(method.getKey().toString(), method);
 		}
-		
+
 		List<RawOrderItem> rawOrders = orderManager.findNativeOrderItems(resource, delivery, orderNr, from, to, status,
 				firstResult, maxResults, userPropertyHandlers, orderBy);
 		List<OrderTableItem> items = new ArrayList<>(rawOrders.size());
@@ -644,7 +695,7 @@ public class ACFrontendManager implements ACService {
 			String orderStatusStr = rawOrder.getOrderStatus();
 			OrderStatus orderStatus = OrderStatus.valueOf(orderStatusStr);
 			Status finalStatus = getStatus(orderStatusStr,  rawOrder.getTrxStatus(), rawOrder.getPspTrxStatus());
-			
+
 			String methodIds = rawOrder.getTrxMethodIds();
 			List<AccessMethod> orderMethods = new ArrayList<>(2);
 			if(StringHelper.containsNonWhitespace(methodIds)) {
@@ -655,23 +706,23 @@ public class ACFrontendManager implements ACService {
 					}
 				}
 			}
-			
+
 			OrderTableItem item = new OrderTableItem(rawOrder.getOrderKey(), rawOrder.getOrderNr(),
 					rawOrder.getTotal(), rawOrder.getCreationDate(), orderStatus, finalStatus,
 					rawOrder.getDeliveryKey(), rawOrder.getUsername(), rawOrder.getUserProperties(), orderMethods);
 			item.setResourceDisplayname(rawOrder.getResourceName());
-			
+
 			items.add(item);
 		}
-		
+
 		return items;
 	}
-	
+
 	public Status getStatus(String orderStatus, String trxStatus, String pspTrxStatus) {
 		boolean warning = false;
 		boolean error = false;
 		boolean canceled = false;
-		
+
 		if(OrderStatus.CANCELED.name().equals(orderStatus)) {
 			canceled = true;
 		} else if(OrderStatus.ERROR.name().equals(orderStatus)) {
@@ -679,7 +730,7 @@ public class ACFrontendManager implements ACService {
 		} else if(OrderStatus.PREPAYMENT.name().equals(orderStatus)) {
 			warning = true;
 		}
-		
+
 		if(StringHelper.containsNonWhitespace(trxStatus)) {
 			if(trxStatus.contains(AccessTransactionStatus.CANCELED.name())) {
 				canceled = true;
@@ -687,7 +738,7 @@ public class ACFrontendManager implements ACService {
 				error = true;
 			}
 		}
-		
+
 		if(StringHelper.containsNonWhitespace(pspTrxStatus)) {
 			if(pspTrxStatus.contains(PSPTransactionStatus.ERROR.name())) {
 				error = true;
@@ -695,7 +746,7 @@ public class ACFrontendManager implements ACService {
 				warning = true;
 			}
 		}
-		
+
 		if(error) {
 			return Status.ERROR;
 		} else if (warning) {
@@ -704,8 +755,72 @@ public class ACFrontendManager implements ACService {
 			return Status.CANCELED;
 		} else {
 			return Status.OK;
-		}	
+		}
 	}
-	
-	
+
+	/**
+	 * @return The current date without time
+	 */
+	private Date dateNow() {
+		return CalendarUtils.removeTime(new Date());
+	}
+
+	@Override
+	public String getExporterID() {
+		return "bookings";
+	}
+
+	@Override
+	public void export(Identity identity, ManifestBuilder manifest, File archiveDirectory, Locale locale) {
+		File noteArchive = new File(archiveDirectory, "Bookings.xlsx");
+		try(OutputStream out = new FileOutputStream(noteArchive);
+			OpenXMLWorkbook workbook = new OpenXMLWorkbook(out, 1)) {
+			OpenXMLWorksheet sheet = workbook.nextWorksheet();
+			sheet.setHeaderRows(1);
+			
+			Row header = sheet.newRow();
+			header.addCell(0, "Status");
+			header.addCell(1, "Booking number");
+			header.addCell(2, "Date");
+			header.addCell(3, "Content");
+			header.addCell(4, "Method");
+			header.addCell(5, "Total");
+			
+			List<OrderTableItem> orders = findOrderItems(null, identity, null, null, null, null, 0, -1, null);
+			for(OrderTableItem order:orders) {
+				exportNoteData(order, sheet, workbook, locale);
+			}
+			
+		} catch (IOException e) {
+			log.error("Unable to export xlsx", e);
+		}
+		manifest.appendFile("Bookings.xlsx");
+	}
+
+	private void exportNoteData(OrderTableItem order, OpenXMLWorksheet sheet, OpenXMLWorkbook workbook, Locale locale) {
+		int col = 0;
+		Row row = sheet.newRow();
+		Collection<AccessMethod> methods = order.getMethods();
+		
+		if(order.getOrderStatus() != null) {
+			row.addCell(col++, order.getOrderStatus().name());
+		}
+		row.addCell(col++, order.getOrderNr());
+		row.addCell(col++, order.getCreationDate(), workbook.getStyles().getDateTimeStyle());
+		row.addCell(col++, order.getResourceDisplayname());
+		StringBuilder methodSb = new StringBuilder();
+		for(AccessMethod method:methods) {
+			AccessMethodHandler handler = accessModule.getAccessMethodHandler(method.getType());
+			if(handler != null) {
+				if(methodSb.length() > 0) methodSb.append(", ");
+				methodSb.append(handler.getMethodName(locale));
+			}
+		}
+		row.addCell(col++, methodSb.toString());
+		for(AccessMethod method:methods) {
+			if(method.isPaymentMethod()) {
+				row.addCell(col++, PriceFormat.fullFormat(order.getTotal()));
+			}
+		}
+	}
 }
